--- a/src/com/company/Site/ru/fa/old/fil/smolensk/about/sovet/Pages/obyavleniya o konkurse.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/about/sovet/Pages/obyavleniya o konkurse.html
@@ -1,11 +1,111 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<span style="display: inline-block;"/>
+<br/>​​<div class="ms-WPBody ms-wpContentDivSpace">
+	<div class="cbq-layout-main">
+		<ul class="dfwp-column dfwp-list" style="width: 100%;">
+			<li class="dfwp-item">
+				<div class="item">
+					<div class="link-item">
+						<a href="/fil/smolensk/about/sovet/Pages/2018-03-14-obyavlen-konkurs-na-zameschenie-dolzhnostey-pps-po-kafedram.aspx">Объявлен конкурс на замещение должностей ППС по кафедрам</a>
+						<div class="startdate">14 марта 2018 г.</div>
+						<div class="description">Конкурс
+ проводится по адресу: 214018, г. Смоленск, проспект Гагарина, 22. 
+Окончательная дата приема заявлений для участия в конкурсе 14.04.2018 г.</div>
+					</div>
+				</div>
+			</li>
+			<li class="dfwp-item">
+				<div class="item">
+					<div class="link-item">
+						<a href="/fil/smolensk/about/sovet/Pages/ob/2018-03-14-obyavlen-konkurs-na-zameschenie-dolzhnostey-pps-po-kafedram.aspx">Информация о выборах на замещение вакантных должностей</a>
+						<div class="startdate">14 марта 2018 г.</div>
+						<div class="description">Информация о выборах на замещение  вакантных должностей </div>
+					</div>
+				</div>
+			</li>
+			<li class="dfwp-item">
+				<div class="item">
+					<div class="link-item">
+						<a href="/fil/smolensk/about/sovet/Pages/ob/2017-10-18-obyavlen-konkurs-na-zameschenie-dolzhnostey-pps-po-kafedram.aspx">Объявлен конкурс на замещение должностей ППС по кафедрам</a>
+						<div class="startdate">18 октября 2017 г.</div>
+						<div class="description">Конкурс
+ проводится по адресу: 214018, г. Смоленск, проспект Гагарина, 22. 
+Окончательная дата приема заявлений для участия в конкурсе 18.11.2017 г.</div>
+					</div>
+				</div>
+			</li>
+			<li class="dfwp-item">
+				<div class="item">
+					<div class="link-item">
+						<a href="/fil/smolensk/about/sovet/Pages/2017-03-16-obyavlen-konkurs-na-zameschenie-dolzhnostey-pps-po-kafedram.aspx">Объявлен конкурс на замещение должностей ППС по кафедрам</a>
+						<div class="startdate">16 марта 2017 г.</div>
+						<div class="description">Конкурс
+ проводится по адресу: 214018, г. Смоленск, проспект Гагарина, 22. 
+Окончательная дата приема заявлений для участия в конкурсе 17.04.2017 г.</div>
+					</div>
+				</div>
+			</li>
+			<li class="dfwp-item">
+				<div class="item">
+					<div class="link-item">
+						<a href="/fil/smolensk/about/sovet/Pages/2017-02-21-obyavlen-konkurs-na-zameschenie-dolzhnostey-pps-po-kafedram.aspx">Объявлен конкурс на замещение должностей ППС по кафедрам</a>
+						<div class="startdate">21 февраля 2017 г.</div>
+						<div class="description">Конкурс проводится по адресу: 214018, г. Смоленск, проспект Гагарина, 22
+Окончательная дата приема заявлений для участия в конкурсе 17.03.2017 г.
+						</div>
+					</div>
+				</div>
+			</li>
+			<li class="dfwp-item">
+				<div class="item">
+					<div class="link-item">
+						<a href="/fil/smolensk/about/sovet/Pages/2016-07-18-obyavlen-konkurs-na-zameschenie-dolzhnostey-pps-po-kafedram.aspx">Информация о выборах на замещение вакантных должностей на 2016/2017 учебный год</a>
+						<div class="startdate">30 июня 2016 г.</div>
+						<div class="description">Информация о выборах на замещение  вакантных должностей на 2016 - 2017 учебный год</div>
+					</div>
+				</div>
+			</li>
+			<li class="dfwp-item">
+				<div class="item">
+					<div class="link-item">
+						<a href="/fil/smolensk/about/sovet/Pages/2016-03-31-obyavlen-konkurs-na-zameschenie-dolzhnostey-pps-po-kafedram-.aspx">Объявлен конкурс на замещение должностей ППС по кафедрам </a>
+						<div class="startdate">30 марта 2016 г.</div>
+						<div class="description">Конкурс проводится 15.06.2016 г. по адресу: 214018, г. Смоленск, проспект Гагарина, 22
 
-
-</body>
-</html>
+Окончательная дата приема заявлений для участия в конкурсе 30.04.2016 г.</div>
+					</div>
+				</div>
+			</li>
+			<li class="dfwp-item">
+				<div class="item">
+					<div class="link-item">
+						<a href="/fil/smolensk/about/sovet/Pages/obyavlen-konkurs-na-zameschenie-dolzhnostey-pps-po-kafedram.aspx">Объявлен конкурс на замещение должностей ППС по кафедрам</a>
+						<div class="startdate">1 октября 2015 г.</div>
+						<div class="description">•    Окончательная дата приема заявлений для участия в конкурсе 20.11.2015
+•    Конкурс проводится 16.12.2015.
+						</div>
+					</div>
+				</div>
+			</li>
+			<li class="dfwp-item">
+				<div class="item">
+					<div class="link-item">
+						<a href="/fil/smolensk/about/sovet/Pages/2015-08-21-obyavlen-konkurs-na-zameschenie-dolzhnostey-pps-po-kafedram-07102015.aspx">Объявлен конкурс на замещение должностей ППС по кафедрам</a>
+						<div class="startdate">21 августа 2015 г.</div>
+						<div class="description">·         Окончательная дата приема заявлений для участия в конкурсе 29.09.2015
+·         Конкурс проводится 07.10.2015.
+·         Документы направлять по адресу: 214018, г. Смоленск, просп. Гагарина, д. 22</div>
+					</div>
+				</div>
+			</li>
+			<li class="dfwp-item">
+				<div class="item">
+					<div class="link-item">
+						<a href="/fil/smolensk/about/sovet/Pages/2015-04-17-obyavlen-konkurs-na-zameschenie-dolzhnostey-pps-po-kafedram.aspx">Объявлен конкурс на замещение должностей ППС по кафедрам</a>
+						<div class="startdate">17 апреля 2015 г.</div>
+						<div class="description">Срок подачи документов до 07.06.2015. Объявление размещено в газете &quot;Смоленские новости&quot; от 15.04.2015 №18(3130)</div>
+					</div>
+				</div>
+			</li>
+		</ul>
+	</div>
+</div>
