--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/qualification/Pages/Профессиональная-этика-государственного-служащего--Урегулирование-конфликта-интересов-на-государственной-службе.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/qualification/Pages/Профессиональная-этика-государственного-служащего--Урегулирование-конфликта-интересов-на-государственной-службе.html
@@ -122,8 +122,8 @@
 					<p>
 						<a href="/fil/smolensk/dpo/Documents/%D0%9F%D1%80%D0%B8%D0%BA%D0%B0%D0%B7%20%E2%84%9639%D0%BE%20%D0%BE%D1%82%2007.06.2018.pdf">
 						Приказ №39/о от 07.06.2018 &quot;О стоимости обучения по дополнительным профессиональным программам в филиале на 2018-2019 учебный год&quot;
-	</a>
-					<br/>
+						</a>
+						<br/>
 					</p>
 					<p>
 					(
@@ -178,7 +178,7 @@
 	</b>
 	<p>
 	</p>
-<p>
+	<p>
 		<span>
 			<strong>1. Система государственного управления и государственной службы в Российской Федерации.</strong>
 		</span>
@@ -199,7 +199,7 @@
 	</div>
 	<p>
 	</p>
-<p>
+	<p>
 		<span>
 			<strong>2. Профессиональная этика государственного служащего.</strong>
 		</span>
@@ -242,7 +242,7 @@
 	<p>
 
 	</p>
-<p>
+	<p>
 		<span>
 			<strong>3. Антикоррупционная деятельности в органах государственной власти.</strong>
 		</span>
@@ -266,7 +266,7 @@
 	</div>
 	<p>
 	</p>
-<p>
+	<p>
 		<span>
 			<strong>4. Конфликт интересов и индивидуальные служебные споры на гражданской службе.</strong>
 		</span>
@@ -302,7 +302,8 @@
 	</div>
 	<p>
 
-</p></div>
+	</p>
+</div>
 <div>
 	<br/>
 </div>
