--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/qualification/Pages/Управление-деятельностью-гостиничных-предприятий.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/qualification/Pages/Управление-деятельностью-гостиничных-предприятий.html
@@ -1,10 +1,6 @@
 <style>
-#myblank {
-font-size: 14pt;
-font-family: Times;
-text-align: justify;
-line-height: 115%; 
-}
+#myblank
+{font-size:14pt;font-family:Times;text-align:justify;line-height:115%;}
 </style>
 
 
@@ -18,8 +14,9 @@ line-height: 115%;
 		<p style="text-indent: 45px;">Комплексная подготовка эффективных директоров, управляющих гостиничного бизнеса.<br/>
 		</p>
 		<p>
-			<h3 style="text-indent: 45px;"><b>Профессиональные компетенции:</b></h3>
-		</p>
+			</p>
+<h3 style="text-indent: 45px;"><b>Профессиональные компетенции:</b></h3>
+		<p></p>
 			В результате освоения программы слушатель должен быть способен:
 
 		<ul>
@@ -55,76 +52,76 @@ line-height: 115%;
 
 <div id="myblank" style="text-indent: 45px;">
 	<br/>
-	<p >
+	<p>
 		<b>
 			<span style="font-size: 17pt;">Краткая информация</span>
 		</b>
 	</p>
 </div>
 
-<div id="myblank" >
+<div id="myblank">
 	<table class="MsoNormalTable ms-rteTable-1" cellspacing="0" cellpadding="15" border="0">
 		<tbody style="font-size: 14pt;">
 				
-			<tr class="ms-rteTableEvenRow-1" >
-				<td width="35%" class="ms-rteTableEvenCol-1" style="padding: 15pt;">
+			<tr class="ms-rteTableEvenRow-1">
+				<td class="ms-rteTableEvenCol-1" width="35%" style="padding: 15pt;">
 					<b>
 						Категория слушателей
 					</b>
 				</td>
-				<td width="65%" class="ms-rteTableOddCol-1" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
+				<td class="ms-rteTableOddCol-1" width="65%" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
 					<span>лица, имеющие среднее профессиональное или высшее образование</span>
 				</td>
 			</tr>
 			<tr class="ms-rteTableOddCol-1">
-				<td width="35%" class="ms-rteTableEvenCol-1" style="padding: 15pt;">
+				<td class="ms-rteTableEvenCol-1" width="35%" style="padding: 15pt;">
 					<b>
 						Срок обучения
 					</b>
 				</td>
-				<td width="65%" class="ms-rteTableOddCol-1" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
+				<td class="ms-rteTableOddCol-1" width="65%" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
 					72 часа
 				</td>
 			</tr>
 			
 			<tr class="ms-rteTableEvenRow-1">
-				<td width="35%" class="ms-rteTableEvenCol-1" style="padding: 15pt;">
+				<td class="ms-rteTableEvenCol-1" width="35%" style="padding: 15pt;">
 					<b>
 						Форма обучения
 					</b>
 				</td>
-				<td width="65%" class="ms-rteTableOddCol-1" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
+				<td class="ms-rteTableOddCol-1" width="65%" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
 					очная
 				</td>
 			</tr>
 			<tr class="ms-rteTableOddCol-1">
-				<td width="35%" class="ms-rteTableEvenCol-1" style="padding: 15pt;">
+				<td class="ms-rteTableEvenCol-1" width="35%" style="padding: 15pt;">
 					<b>
 						Режим занятий
 					</b>
 				</td>
-				<td width="65%" class="ms-rteTableOddCol-1" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
+				<td class="ms-rteTableOddCol-1" width="65%" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
 					4-8 часов в день
 				</td>
 			</tr>
 			
 			<tr class="ms-rteTableEvenRow-1">
-				<td width="35%" class="ms-rteTableEvenCol-1" style="padding: 15pt;">
+				<td class="ms-rteTableEvenCol-1" width="35%" style="padding: 15pt;">
 					<b>
 						Форма аттестации
 					</b>
 				</td>
-				<td width="65%" class="ms-rteTableOddCol-1" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
+				<td class="ms-rteTableOddCol-1" width="65%" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
 					экзамен в форме тестирования
 				</td>
 			</tr>
 			<tr class="ms-rteTableOddCol-1">
-				<td width="35%" class="ms-rteTableEvenCol-1" style="padding: 15pt;" valign="top">
+				<td class="ms-rteTableEvenCol-1" width="35%" valign="top" style="padding: 15pt;">
 					<b>
 						Стоимость обучения
 					</b>
 				</td>
-				<td width="65%" class="ms-rteTableOddCol-1" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
+				<td class="ms-rteTableOddCol-1" width="65%" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
 					<p>
 						* 5880,00 руб.
 					</p>
@@ -143,12 +140,12 @@ line-height: 115%;
 			</tr>
 			
 			<tr class="ms-rteTableEvenRow-1">
-				<td width="35%" class="ms-rteTableEvenCol-1" style="padding: 15pt;" valign="middle">
+				<td class="ms-rteTableEvenCol-1" width="35%" valign="middle" style="padding: 15pt;">
 					<b>
 						Документ по окончании обучения
 					</b>
 				</td>
-				<td width="65%" class="ms-rteTableOddCol-1" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
+				<td class="ms-rteTableOddCol-1" width="65%" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
 					<p>
 					<a href="/fil/smolensk/dpo/qualification/PublishingImages/prof.jpg" target="_blank">удостоверение о повышении квалификации</a>
 					установленного образца
@@ -174,9 +171,11 @@ line-height: 115%;
 <div id="myblank" style="text-indent: 45px;">
 <p>
 	<b>
-		<h3>Перечень разделов и тем (модулей)</h3>
+		</b></p>
+<h3><b>Перечень разделов и тем (модулей)</b></h3>
+<b>
 	</b>
-</p>
+<p></p>
 <p>
 	<span>1. Введение в индустрию гостеприимства.</span>
 </p>
@@ -209,7 +208,7 @@ line-height: 115%;
 
 
 
-<div class="ms-rteElement-Callout4" id="myblank" style=" width: 570px;">
+<div class="ms-rteElement-Callout4" id="myblank" style="width: 570px;">
 	<h3 style="text-indent: 45px;">Для записи на обучение необходимо представить:<br/>
 	</h3>
 	<ul>
