--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/qualification/Pages/Управление-инвестиционными-проектами.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/qualification/Pages/Управление-инвестиционными-проектами.html
@@ -115,7 +115,11 @@
 					</b>
 				</td>
 				<td width="65%" class="ms-rteTableOddCol-1" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
-					<p><a href="http://old.fa.ru/fil/smolensk/dpo/Documents/%D0%9F%D1%80%D0%B8%D0%BA%D0%B0%D0%B7%20%D0%BE%D1%82%2007%20%D0%B8%D1%8E%D0%BD%D1%8F%202017%20%D0%B3%20%E2%84%96%2025%D0%BE.pdf">Приказ №25/о от 07.06.2017 &quot;О стоимости обучения по дополнительным профессиональным программам в филиале на 2017-2018 учебный год&quot;</a><br/>
+					<p>
+						<a href="/fil/smolensk/dpo/Documents/%D0%9F%D1%80%D0%B8%D0%BA%D0%B0%D0%B7%20%E2%84%9639%D0%BE%20%D0%BE%D1%82%2007.06.2018.pdf">
+						Приказ №39/о от 07.06.2018 &quot;О стоимости обучения по дополнительным профессиональным программам в филиале на 2018-2019 учебный год&quot;
+						</a>
+						<br/>
 					</p>
 					<p>
 					(
