--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/gb.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/gb.html
@@ -195,6 +195,13 @@
 <div>
 
 </div>
+
+
+
+
+
+
+
 <div class="ms-rteElement-Callout4">
 	<div>Необходимые&#160;документы для поступления:</div>
 	<ul>
@@ -206,10 +213,10 @@
 			</font>;</li>
 		<li>договоры:<ul>
 				<li>
-					<a href="/fil/smolensk/dpo/retraining/Documents/oldDocs/%D0%94%D0%BE%D0%B3%D0%BE%D0%B2%D0%BE%D1%80_%D0%9F%D0%9F_%D0%A4%D0%B8%D0%B7%20%D0%BB%D0%B8%D1%86%D0%BE.docx">Физическое лицо</a>
+					<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Fiz_lico.docx">Физическое лицо</a>
 				</li>
 				<li>
-					<a href="/fil/smolensk/dpo/retraining/Documents/oldDocs/%D0%94%D0%BE%D0%B3%D0%BE%D0%B2%D0%BE%D1%80_%D0%9F%D0%9F_%D1%8E%D1%80%20%D0%BB%D0%B8%D1%86%D0%BE.docx">Юридическое лицо</a>
+					<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Ur_lico.docx">Юридическое лицо</a>
 				</li>
 			</ul>
 		</li>
@@ -218,6 +225,16 @@
 </div>
 <div>
 </div>
+
+
+
+
+
+
+
+
+
+
 <div>
 	<b>
 		<span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Перечень модулей, дисциплин</span>
