--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/buh.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/buh.html
@@ -1,10 +1,74 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<div class="ms-rteElement-Callout2"><h3 class="ms-rteElement-H3B">Цель программы</h3>
+<p>Формирование профессиональных компетенций, требуемых для выполнения нового вида профессиональной деятельности в сфере бухгалтерского учета, анализа и аудита.</p>
+<p><a target="_blank" href="/fil/smolensk/dpo/retraining/Documents/buaia.pdf"><img src="/_layouts/images/icpdf.png" class="ms-asset-icon ms-rtePosition-4" alt=""/>Профессиональные компетенции</a></p></div>
+<h3 class="ms-rteElement-H3B">Краткая информация</h3>
+<table class="ms-rteTable-1" width="100%" cellspacing="0"><tbody><tr class="ms-rteTableEvenRow-1"><td colspan="1" rowspan="1" class="ms-rteTableEvenCol-1"><p class="ms-rteElement-P"><strong>Категория слушателей</strong></p></td>
+<td colspan="1" rowspan="1" class="ms-rteTableOddCol-1"><ul><li><div class="ms-rteElement-P"><span>лица, имеющие среднее профессиональное или высшее образование;</span></div></li>
+<li><div class="ms-rteElement-P"><span>лица, получающие высшее образование</span></div></li></ul></td></tr>
+<tr class="ms-rteTableOddRow-1"><td colspan="1" rowspan="1" class="ms-rteTableEvenCol-1"><p class="ms-rteElement-P"><strong>​Срок обучения</strong></p></td>
+<td class="ms-rteTableOddCol-1"><p class="ms-rteElement-P">​8 месяцев</p></td></tr>
+<tr class="ms-rteTableEvenRow-1"><td colspan="1" rowspan="1" class="ms-rteTableEvenCol-1"><p class="ms-rteElement-P"><strong>​Форма обучения</strong></p></td>
+<td class="ms-rteTableOddCol-1"><p class="ms-rteElement-P">​очно-заочная</p></td></tr>
+<tr class="ms-rteTableOddRow-1"><td colspan="1" rowspan="1" class="ms-rteTableEvenCol-1"><p class="ms-rteElement-P"><strong>​Режим занятий</strong></p></td>
+<td class="ms-rteTableOddCol-1"><ul><li><div class="ms-rteElement-P">​3&#160;будних дня в неделю&#160;с 18.30 до 21.40</div></li>
+<li><div class="ms-rteElement-P">в субботу с 10.00 до 13.00.</div></li></ul></td></tr>
+<tr class="ms-rteTableEvenRow-1"><td colspan="1" rowspan="1" class="ms-rteTableEvenCol-1"><p class="ms-rteElement-P"><strong>​Форма аттестации</strong></p></td>
+<td rowspan="1" class="ms-rteTableOddCol-1"><p class="ms-rteElement-P">защита <a target="_blank" href="/fil/smolensk/dpo/normativdocs/%D0%9F%D1%80%D0%B8%D0%BA%D0%B0%D0%B7%20%E2%84%961781%D0%BE%20%D0%BE%D1%82%2030.09.2014.pdf">выпускной​ аттестационной работы​</a></p></td></tr>
+<tr class="ms-rteTableOddRow-1"><td colspan="1" rowspan="1" class="ms-rteTableEvenCol-1"><p class="ms-rteElement-P"><strong>​Стоимость обучения</strong></p></td>
+<td class="ms-rteTableOddCol-1"><p class="ms-rteElement-P">​30 000 руб. (<a target="_blank" href="/fil/smolensk/dpo/retraining/Documents/bank_smolensk.pdf">скачать реквизиты оплаты</a>)</p></td></tr>
+<tr class="ms-rteTableEvenRow-1"><td colspan="1" rowspan="1" class="ms-rteTableEvenCol-1"><p class="ms-rteElement-P"><strong>Документ&#160;по окончании​ обучения</strong></p></td>
+<td rowspan="1" class="ms-rteTableOddCol-1"><p class="ms-rteElement-P"><a target="_blank" href="/fil/smolensk/dpo/retraining/PublishingImages/diplom.jpg">диплом о профессиональной&#160;переподготовке</a>&#160;установленного образца</p></td></tr></tbody></table>
+<div class="ms-rteElement-Callout4"><div><span>Необходимые&#160;документы для поступления:</span></div>
+<ul><li><span><a target="_blank" href="/fil/smolensk/dpo/Documents/anketa.docx">анкета</a>;</span></li>
+<li><span><span><font color="#03497e"><a target="_blank" href="/fil/smolensk/dpo/retraining/Documents/zayav-pp.docx">заявление</a></font></span>;</span></li>
+<li><span><a target="_blank" href="/fil/smolensk/dpo/Documents/dogovor.docx"></a>
+</span>
+договоры:
+<ul>
+<li>
+					<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Fiz_lico.docx">Физическое лицо</a>
+				</li>
+				<li>
+					<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Ur_lico.docx">Юридическое лицо</a>
+				</li>
+</ul>
+<span>
+<a target="_blank" href="/fil/smolensk/dpo/Documents/dogovor.docx">
+</a>
+</span>
+</li>
+<li>
+<span>другие документы (копия паспорта,&#160;</span>
+<span>копия документа&#160;об образовании,&#160;</span>
+<span>фотографии&#160;и&#160;др.)
+</span>
+</li>
+</ul>
+</div>
 
-</body>
-</html>
+
+
+
+
+<h3 class="ms-rteElement-H3B">Перечень дисциплин</h3>
+<p class="ms-rteElement-P"><span><strong>Базовые дисциплины</strong></span></p>
+<ul><li><div class="ms-rteElement-P"><span>Экономическая теория (микроэкономика)</span></div></li>
+<li><div class="ms-rteElement-P"><span>Правовое регулирование предпринимательской деятельности</span></div></li>
+<li><div class="ms-rteElement-P"><span>Финансы организации</span></div></li>
+<li><div class="ms-rteElement-P"><span>Налоги и налогообложение</span></div></li></ul>
+<p class="ms-rteElement-P"><span><strong>Специальные дисциплины</strong></span></p>
+<ul><li><div class="ms-rteElement-P"><span>Теория бухгалтерского учета</span></div></li>
+<li><div class="ms-rteElement-P"><span>Бухгалтерский финансовый учет</span></div></li>
+<li><div class="ms-rteElement-P"><span>Бухгалтерский управленческий учет</span></div></li>
+<li><div class="ms-rteElement-P"><span>Бухгалтерская финансовая отчетность</span></div></li>
+<li><div class="ms-rteElement-P"><span>Практикум по бухгалтерскому учету (1С:Бухгалтерия, 8.2)</span></div></li>
+<li><div class="ms-rteElement-P"><span>Финансовый анализ</span></div></li>
+<li><div class="ms-rteElement-P"><span>Комплексный анализ финансово-хозяйственной деятельности</span></div></li>
+<li><div class="ms-rteElement-P"><span>Международные стандарты финансовой отчетности</span></div></li>
+<li><div class="ms-rteElement-P"><span>Основы аудита</span></div></li>
+<li><div class="ms-rteElement-P"><span>Аудит финансовой отчетности и корпоративный финансовый контроль</span></div></li></ul>
+<h3 class="ms-rteElement-H3B">Материалы для слушателей</h3>
+<ul><li><a href="/fil/smolensk/dpo/retraining/Documents/%D0%A0%D0%95%D0%9A%D0%9E%D0%9C%D0%95%D0%9D%D0%94%D0%A3%D0%95%D0%9C%D0%AB%D0%95%20%D0%A2%D0%95%D0%9C%D0%AB%20%D0%92%D0%90%D0%A0%20%D0%91%D0%A3%202017-18%20%D0%B3%D0%B3_.pdf">Рекомендуемые темы выпускных аттестационных работ&#160;</a></li>
+<li><a href="/fil/smolensk/dpo/retraining/Documents/%D0%9F%D0%BE%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5%20%D0%BE%20%D0%92%D0%90%D0%A0%20%D1%81%D0%BB%D1%83%D1%88%D0%B0%D1%82%D0%B5%D0%BB%D0%B5%D0%B9%20(%D0%BF%D1%80%D0%B8%D0%BA%D0%B0%D0%B7%20%E2%84%96%201781_%D0%BE%20%D0%BE%D1%82%2030.09.2014).pdf"><span>Методические указания по написанию и защите выпускной&#160; аттестационной <br/>работы слушателями&#160; дополнительного профессионального образования (профессиональная переподготовка<span style="display: inline-block;">)</span></span><span style="display: inline-block;"></span></a><br/></li></ul>
+<h3 class="ms-rteElement-H3B"><a target="_blank" href="/fil/smolensk/dpo/Pages/contacts.aspx">Контакты</a></h3>
+<br/><br/>
