--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/ekupr.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/ekupr.html
@@ -1,10 +1,230 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<div class="ms-rteElement-Callout2">
+	<h3 class="ms-rteElement-H3B">Цель программы</h3>
+	<p>Формирование профессиональных компетенций, требуемых для выполнения 
+нового вида профессиональной деятельности в сфере экономики труда и управления персоналом.<br/>
+	</p>
+	<p>
+		<a href="/fil/smolensk/dpo/retraining/Documents/ektrud.pdf" target="_blank">
+			<img class="ms-asset-icon ms-rtePosition-4" src="/_layouts/images/icpdf.png" alt=""/>
+			<span>Профессиональные компетенции</span>
+		</a>
+		<a href="/fil/smolensk/dpo/retraining/Documents/finmen.pdf">
+			<span style="display: inline-block;"/>
+		</a>
+		<br/>
+	</p>
+</div>
+<a href="/fil/smolensk/dpo/retraining/Documents/finmen.pdf">
+	<h3 class="ms-rteElement-H3B"/>
+​</a>
+<h3 class="ms-rteElement-H3B">Краткая информация</h3>
+<table class="ms-rteTable-1" width="100%" cellspacing="0">
+	<tbody>
+		<tr class="ms-rteTableEvenRow-1">
+			<td class="ms-rteTableEvenCol-1" rowspan="1" colspan="1">
+				<p class="ms-rteElement-P">
+					<strong>Категория слушателей</strong>
+				</p>
+			</td>
+			<td class="ms-rteTableOddCol-1" rowspan="1" colspan="1">
+				<ul>
+					<li>
+						<div class="ms-rteElement-P">лица, имеющие среднее профессиональное или высшее образование;</div>
+					</li>
+					<li>
+						<div class="ms-rteElement-P">лица, получающие высшее образование</div>
+					</li>
+				</ul>
+			</td>
+		</tr>
+		<tr class="ms-rteTableOddRow-1">
+			<td class="ms-rteTableEvenCol-1" rowspan="1" colspan="1">
+				<p class="ms-rteElement-P">
+					<strong>​Срок обучения</strong>
+				</p>
+			</td>
+			<td class="ms-rteTableOddCol-1">
+				<p class="ms-rteElement-P">​8&#160; - 10 месяцев</p>
+			</td>
+		</tr>
+		<tr class="ms-rteTableEvenRow-1">
+			<td class="ms-rteTableEvenCol-1" rowspan="1" colspan="1">
+				<p class="ms-rteElement-P">
+					<strong>​Форма обучения</strong>
+				</p>
+			</td>
+			<td class="ms-rteTableOddCol-1">
+				<p class="ms-rteElement-P">​очно-заочная</p>
+			</td>
+		</tr>
+		<tr class="ms-rteTableOddRow-1">
+			<td class="ms-rteTableEvenCol-1" rowspan="1" colspan="1">
+				<p class="ms-rteElement-P">
+					<strong>​Режим занятий</strong>
+				</p>
+			</td>
+			<td class="ms-rteTableOddCol-1">
+				<ul>
+					<li>
+						<div class="ms-rteElement-P">​3&#160;будних дня в неделю&#160;с 18.30 до 21.40</div>
+					</li>
+					<li>
+						<div class="ms-rteElement-P">в субботу с 10.00 до 13.00.</div>
+					</li>
+				</ul>
+			</td>
+		</tr>
+		<tr class="ms-rteTableEvenRow-1">
+			<td class="ms-rteTableEvenCol-1" rowspan="1" colspan="1">
+				<p class="ms-rteElement-P">
+					<strong>​Форма аттестации</strong>
+				</p>
+			</td>
+			<td class="ms-rteTableOddCol-1" rowspan="1">
+				<p class="ms-rteElement-P">защита <a href="/fil/smolensk/dpo/normativdocs/%D0%9F%D1%80%D0%B8%D0%BA%D0%B0%D0%B7%20%E2%84%961781%D0%BE%20%D0%BE%D1%82%2030.09.2014.pdf" target="_blank">выпускной​ аттестационной работы​</a>
+				</p>
+			</td>
+		</tr>
+		<tr class="ms-rteTableOddRow-1">
+			<td class="ms-rteTableEvenCol-1" rowspan="1" colspan="1">
+				<p class="ms-rteElement-P">
+					<strong>​Стоимость обучения</strong>
+				</p>
+			</td>
+			<td class="ms-rteTableOddCol-1">
+				<p class="ms-rteElement-P">​30 000 руб. (<a href="/fil/smolensk/dpo/retraining/Documents/bank_smolensk.pdf" target="_blank">скачать реквизиты оплаты</a>)</p>
+			</td>
+		</tr>
+		<tr class="ms-rteTableEvenRow-1">
+			<td class="ms-rteTableEvenCol-1" rowspan="1" colspan="1">
+				<p class="ms-rteElement-P">
+					<strong>Документ&#160;по окончании​ обучения</strong>
+				</p>
+			</td>
+			<td class="ms-rteTableOddCol-1" rowspan="1">
+				<p class="ms-rteElement-P">
+					<a href="/fil/smolensk/dpo/retraining/PublishingImages/diplom.jpg" target="_blank">диплом о профессиональной&#160;переподготовке</a>&#160;установленного образца​</p>
+			</td>
+		</tr>
+	</tbody>
+</table>
+<div/>
 
-</body>
-</html>
+
+
+
+
+
+
+
+
+<div>
+	<div class="ms-rteElement-Callout4">
+		<div>Необходимые&#160;документы для поступления:</div>
+		<ul>
+			<li>
+				<a href="/fil/smolensk/dpo/Documents/anketa.docx" target="_blank">анкета</a>;</li>
+			<li>
+				<font color="#03497e">
+					<a href="/fil/smolensk/dpo/retraining/Documents/zayav-pp.docx" target="_blank">заявление</a>
+				</font>;</li>
+			<li>
+				<a href="/fil/smolensk/dpo/Documents/dogovor.docx" target="_blank"/>договоры:<ul>
+					<li>
+					<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Fiz_lico.docx">Физическое лицо</a>
+				</li>
+				<li>
+					<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Ur_lico.docx">Юридическое лицо</a>
+				</li>
+				</ul>
+			</li>
+			<li>другие документы (копия паспорта,&#160;копия документа&#160;об образовании,&#160;фотографии&#160;и&#160;др.)</li>
+		</ul>
+	</div>
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	<h3 class="ms-rteElement-H3B">Перечень дисциплин</h3>
+	<p class="ms-rteElement-P">
+		<strong>Базовые дисциплины</strong>
+	</p>
+	<ul>
+		<li>
+			<span>Базовые дисциплины</span>
+		</li>
+		<li>
+			<span>
+				<span style="display: inline-block;"/>Менеджмент</span>
+		</li>
+		<li>
+			<span>Экономика организаций</span>
+		</li>
+		<li>
+			<span>Трудовое право</span>
+		</li>
+		<li>
+			<span>Бухгалтерский учет<span style="display: inline-block;">
+					<span style="display: inline-block;"/>
+				</span>
+			</span>
+		</li>
+	</ul>
+	<p>
+		<strong>Специальные дисциплины</strong>
+		<br/>
+	</p>
+	<ul>
+		<li>Специальные дисциплины</li>
+		<li>Экономика и социология труда</li>
+		<li>Рынок труда</li>
+		<li>Управление персоналом<span style="display: inline-block;"/>
+		</li>
+		<li>Управление человеческими ресурсами</li>
+		<li>Организационное поведение</li>
+		<li>Корпоративная социальная ответственность</li>
+		<li>Кадровое делопроизводство</li>
+		<li>Информационные системы в управлении персоналом</li>
+		<li>Стратегическое планирование&#160; и развитие карьеры</li>
+		<li>Аудит и контроллинг персонала</li>
+		<li>Инновационный менеджмент в управлении персоналом</li>
+	</ul>
+	<p>
+		<br/>
+	</p>
+	<p>
+		<br/>
+	</p>
+	<p>
+		<br/>
+	</p>
+	<h3 class="ms-rteElement-H3B">Материалы для слушателей</h3>
+	<ul>
+		<li>
+			<a href="/fil/smolensk/dpo/retraining/Documents/%D0%9F%D0%BE%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5%20%D0%BE%20%D0%92%D0%90%D0%A0%20%D1%81%D0%BB%D1%83%D1%88%D0%B0%D1%82%D0%B5%D0%BB%D0%B5%D0%B9%20(%D0%BF%D1%80%D0%B8%D0%BA%D0%B0%D0%B7%20%E2%84%96%201781_%D0%BE%20%D0%BE%D1%82%2030.09.2014).pdf">
+				<span>Методические указания по написанию и защите выпускной&#160; аттестационной <br/>работы слушателями&#160; дополнительного профессионального образования (профессиональная переподготовка<span style="display: inline-block;">)</span>
+				</span>
+			</a>
+		</li>
+		<li>
+			<span>
+				<span style="display: inline-block;">
+					<a href="/fil/smolensk/dpo/retraining/Documents/%D0%9F%D1%80%D0%B8%D0%BC%D0%B5%D1%80%D0%BD%D0%B0%D1%8F%20%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B0%20%D0%92%D0%90%D0%A0%20%D0%AD%D0%BA%D0%BE%D0%BD%D0%BE%D0%BC%D0%B8%D0%BA%D0%B0%20%D1%82%D1%80%D1%83%D0%B4%D0%B0%2017-18.pdf">Примерная тематика ВАР</a>
+					<br/>
+				</span>
+			</span>
+		</li>
+	</ul>
+	<h3 class="ms-rteElement-H3B">
+		<a href="/fil/smolensk/dpo/Pages/contacts.aspx" target="_blank">Контакты​</a>
+	</h3>
+</div>
+<div>
+	<br/>
+</div>
