--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/fin-men.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/fin-men.html
@@ -1,10 +1,218 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<div class="ms-rteElement-Callout2">
+	<h3 class="ms-rteElement-H3B">Цель программы</h3>
+	<p>Формирование профессиональных компетенций, требуемых для выполнения 
+нового вида профессиональной деятельности в сфере финансового менеджмента.</p>
+	<p>
+		<span>
+			<a href="/fil/smolensk/dpo/retraining/Documents/finmen.pdf">
+				<img class="ms-asset-icon ms-rtePosition-4" src="/_layouts/images/icpdf.png" alt=""/>Профессиональные компетенции</a>
+			<a href="/fil/smolensk/dpo/retraining/Documents/finmen.pdf">
+				<span style="display: inline-block;"/>
+			</a>
+		</span>
+		<br/>
+	</p>
+</div>
+<a href="/fil/smolensk/dpo/retraining/Documents/finmen.pdf">
+	<h3 class="ms-rteElement-H3B"/>
+​</a>
+<h3 class="ms-rteElement-H3B">Краткая информация</h3>
+<table class="ms-rteTable-1" width="100%" cellspacing="0">
+	<tbody>
+		<tr class="ms-rteTableEvenRow-1">
+			<td colspan="1" rowspan="1" class="ms-rteTableEvenCol-1">
+				<p class="ms-rteElement-P">
+					<strong>Категория слушателей</strong>
+				</p>
+			</td>
+			<td colspan="1" rowspan="1" class="ms-rteTableOddCol-1">
+				<ul>
+					<li>
+						<div class="ms-rteElement-P">лица, имеющие среднее профессиональное или высшее образование;</div>
+					</li>
+					<li>
+						<div class="ms-rteElement-P">лица, получающие высшее образование</div>
+					</li>
+				</ul>
+			</td>
+		</tr>
+		<tr class="ms-rteTableOddRow-1">
+			<td colspan="1" rowspan="1" class="ms-rteTableEvenCol-1">
+				<p class="ms-rteElement-P">
+					<strong>​Срок обучения</strong>
+				</p>
+			</td>
+			<td class="ms-rteTableOddCol-1">
+				<p class="ms-rteElement-P">​8&#160; - 10 месяцев</p>
+			</td>
+		</tr>
+		<tr class="ms-rteTableEvenRow-1">
+			<td colspan="1" rowspan="1" class="ms-rteTableEvenCol-1">
+				<p class="ms-rteElement-P">
+					<strong>​Форма обучения</strong>
+				</p>
+			</td>
+			<td class="ms-rteTableOddCol-1">
+				<p class="ms-rteElement-P">​очно-заочная</p>
+			</td>
+		</tr>
+		<tr class="ms-rteTableOddRow-1">
+			<td colspan="1" rowspan="1" class="ms-rteTableEvenCol-1">
+				<p class="ms-rteElement-P">
+					<strong>​Режим занятий</strong>
+				</p>
+			</td>
+			<td class="ms-rteTableOddCol-1">
+				<ul>
+					<li>
+						<div class="ms-rteElement-P">​3&#160;будних дня в неделю&#160;с 18.30 до 21.40</div>
+					</li>
+					<li>
+						<div class="ms-rteElement-P">в субботу с 10.00 до 13.00.</div>
+					</li>
+				</ul>
+			</td>
+		</tr>
+		<tr class="ms-rteTableEvenRow-1">
+			<td colspan="1" rowspan="1" class="ms-rteTableEvenCol-1">
+				<p class="ms-rteElement-P">
+					<strong>​Форма аттестации</strong>
+				</p>
+			</td>
+			<td rowspan="1" class="ms-rteTableOddCol-1">
+				<p class="ms-rteElement-P">защита <a target="_blank" href="/fil/smolensk/dpo/normativdocs/%D0%9F%D1%80%D0%B8%D0%BA%D0%B0%D0%B7%20%E2%84%961781%D0%BE%20%D0%BE%D1%82%2030.09.2014.pdf">выпускной​ аттестационной работы​</a>
+				</p>
+			</td>
+		</tr>
+		<tr class="ms-rteTableOddRow-1">
+			<td colspan="1" rowspan="1" class="ms-rteTableEvenCol-1">
+				<p class="ms-rteElement-P">
+					<strong>​Стоимость обучения</strong>
+				</p>
+			</td>
+			<td class="ms-rteTableOddCol-1">
+				<p class="ms-rteElement-P">​30 000 руб. (<a target="_blank" href="/fil/smolensk/dpo/retraining/Documents/bank_smolensk.pdf">скачать реквизиты оплаты</a>)</p>
+			</td>
+		</tr>
+		<tr class="ms-rteTableEvenRow-1">
+			<td colspan="1" rowspan="1" class="ms-rteTableEvenCol-1">
+				<p class="ms-rteElement-P">
+					<strong>Документ&#160;по окончании​ обучения</strong>
+				</p>
+			</td>
+			<td rowspan="1" class="ms-rteTableOddCol-1">
+				<p class="ms-rteElement-P">
+					<a target="_blank" href="/fil/smolensk/dpo/retraining/PublishingImages/diplom.jpg">диплом о профессиональной&#160;переподготовке</a>&#160;установленного образца​</p>
+			</td>
+		</tr>
+	</tbody>
+</table>
+<div/>
 
-</body>
-</html>
+
+
+
+
+
+
+
+<div>
+	<div class="ms-rteElement-Callout4">
+		<div>Необходимые&#160;документы для поступления:</div>
+		<ul>
+			<li>
+				<a target="_blank" href="/fil/smolensk/dpo/Documents/anketa.docx">анкета</a>;</li>
+			<li>
+				<font color="#03497e">
+					<a target="_blank" href="/fil/smolensk/dpo/retraining/Documents/zayav-pp.docx">заявление</a>
+				</font>;</li>
+			<li>
+				<a target="_blank" href="/fil/smolensk/dpo/Documents/dogovor.docx"/>договоры:<ul>
+					<li>
+					<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Fiz_lico.docx">Физическое лицо</a>
+				</li>
+				<li>
+					<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Ur_lico.docx">Юридическое лицо</a>
+				</li>
+				</ul>
+			</li>
+			<li>другие документы (копия паспорта,&#160;копия документа&#160;об образовании,&#160;фотографии&#160;и&#160;др.)</li>
+		</ul>
+	</div>
+	<h3 class="ms-rteElement-H3B">Перечень дисциплин</h3>
+	<p class="ms-rteElement-P">
+		<strong>Базовые дисциплины</strong>
+	</p>
+	<ul>
+		<li>
+			<div class="ms-rteElement-P">Экономическая теория (микроэкономика)</div>
+		</li>
+		<li>
+			<div class="ms-rteElement-P">Правовое регулирование предпринимательской деятельности</div>
+		</li>
+		<li>
+			<div class="ms-rteElement-P">Бухгалтерский учет<br/>
+			</div>
+		</li>
+		<li>
+			<div class="ms-rteElement-P">Налоги и налогообложение</div>
+		</li>
+	</ul>
+	<p class="ms-rteElement-P">
+		<strong>Специальные дисциплины</strong>
+	</p>
+	<ul>
+		<li>
+			<div class="ms-rteElement-P">Финансовый менеджмент<br/>
+			</div>
+		</li>
+		<li>
+			<div class="ms-rteElement-P">Деньги, кредит, банки<br/>
+			</div>
+		</li>
+		<li>
+			<div class="ms-rteElement-P">Финансы организаций<br/>
+			</div>
+		</li>
+		<li>
+			<div class="ms-rteElement-P">Управленческие финансы</div>
+		</li>
+		<li>
+			<div class="ms-rteElement-P">Финансовое <span>планирование</span> и <span>прогнозированние <span style="display: inline-block;"/>
+				</span>
+			</div>
+		</li>
+
+		<li>
+			<div class="ms-rteElement-P">Инвестиционнй анализ<br/>
+			</div>
+		</li>
+		<li>
+			<div class="ms-rteElement-P">АИТ в финансовом менеджменте</div>
+		</li>
+		<li>Оценка и анализ рисков</li>
+		<li>Оценка стоимости и бизнеса<br/>
+		</li>
+	</ul>
+	<h3 class="ms-rteElement-H3B">Материалы для слушателей</h3>
+	<ul>
+		<li>
+			<a href="/fil/smolensk/dpo/Documents/Kval/%D0%A2%D0%B5%D0%BC%D1%8B%20%D0%92%D0%90%D0%A0-%20%D0%A4%D0%9C.pdf">Рекомендуемые темы</a>
+			<br/>
+			<a href="/fil/smolensk/dpo/retraining/Documents/%D0%9F%D0%BE%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5%20%D0%BE%20%D0%92%D0%90%D0%A0%20%D1%81%D0%BB%D1%83%D1%88%D0%B0%D1%82%D0%B5%D0%BB%D0%B5%D0%B9%20(%D0%BF%D1%80%D0%B8%D0%BA%D0%B0%D0%B7%20%E2%84%96%201781_%D0%BE%20%D0%BE%D1%82%2030.09.2014).pdf"/>
+		</li>
+		<li>
+			<a href="/fil/smolensk/dpo/retraining/Documents/%D0%9F%D0%BE%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5%20%D0%BE%20%D0%92%D0%90%D0%A0%20%D1%81%D0%BB%D1%83%D1%88%D0%B0%D1%82%D0%B5%D0%BB%D0%B5%D0%B9%20(%D0%BF%D1%80%D0%B8%D0%BA%D0%B0%D0%B7%20%E2%84%96%201781_%D0%BE%20%D0%BE%D1%82%2030.09.2014).pdf">
+				<span>Методические указания по написанию и защите выпускной&#160; аттестационной <br/>работы слушателями&#160; дополнительного профессионального образования (профессиональная переподготовка<span style="display: inline-block;">)</span>
+				</span>
+			</a>
+			<br/>
+		</li>
+	</ul>
+	<h3 class="ms-rteElement-H3B">
+		<a target="_blank" href="/fil/smolensk/dpo/Pages/contacts.aspx">Контакты​</a>
+	</h3>
+</div>
+<div>
+	<br/>
+</div>
