--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/fin_cred.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/fin_cred.html
@@ -1,10 +1,430 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<div class="ms-rteThemeForeColor-5-4" style="text-align: center;">
+	<b style="font-size: 11pt; background-color: transparent;">
+		<span style="font-size: 14pt; line-height: 115%;">
+			<br/>
+		</span>
+	</b>
+</div>
+<div class="ms-rteThemeForeColor-5-4" style="text-align: center;">
+	<b style="font-size: 11pt; background-color: transparent;">
+		<span style="font-size: 14pt; line-height: 115%;">​<span>Цель программы</span>
+		</span>
+	</b>
+	<span>
 
-</body>
-</html>
+	</span>
+</div>
+<span class="ms-rteThemeForeColor-5-4">
+</span>
+<p class="MsoNormal ms-rteThemeForeColor-5-4" style="text-align: justify; text-indent: 35.45pt;">
+	<span style="font-size: 14pt; line-height: 115%;">Формирование профессиональных компетенций,
+требуемых для выполнения нового вида профессиональной деятельности в сфере
+финансов и кредита.</span>
+</p>
+<div>
+
+</div>
+<p class="MsoNormal" align="left">
+	<span style="font-size: 14pt; line-height: 115%;">
+		<a href="/fil/smolensk/dpo/retraining/Documents/%D0%9F%D0%A0%D0%9E%D0%A4%D1%81%D1%82%D0%B0%D0%BD%D0%B4%D0%B0%D1%80%D1%82%D1%8B_%D0%A4%D0%B8%D0%BD%D0%B0%D0%BD%D1%81%D1%8B.pdf">Профессиональные компетенции​</a>
+	</span>
+</p>
+<div>
+
+</div>
+<p class="MsoNormal" style="margin-bottom: 0.0001pt; text-align: justify; line-height: normal;">
+	<b>
+		<span style="font-size: 14pt;">Краткая информация</span>
+	</b>
+</p>
+<div>
+
+</div>
+<p class="MsoNormal" style="text-align: justify;">
+	<span style="font-size: 12pt; line-height: 115%;">&#160;</span>
+</p>
+<div>
+
+</div>
+<table class="MsoNormalTable" width="633" cellspacing="0" cellpadding="0" border="0" style="width: 474.9pt; margin-left: -8.8pt;">
+	<tbody>
+		<tr style="height: 27.75pt;">
+			<td width="204" style="width: 152.65pt; border: 1pt solid windowtext; padding: 0cm 5.4pt; height: 27.75pt;">
+				<p class="MsoNormal" align="left">
+					<b>Категория слушателей</b>
+				</p>
+			</td>
+			<td width="430" style="width: 322.25pt; border-color: windowtext windowtext windowtext currentcolor; border-style: solid solid solid none; border-width: 1pt 1pt 1pt medium; padding: 0cm 5.4pt; height: 27.75pt;">
+				<p class="MsoNormal" align="left">
+					<span style="font-size: 12pt; line-height: 115%;">лица, имеющие или получающие высшее образование</span>
+				</p>
+			</td>
+		</tr>
+		<tr style="height: 20.1pt;">
+			<td width="204" style="width: 152.65pt; border-color: currentcolor windowtext windowtext; border-style: none solid solid; border-width: medium 1pt 1pt; padding: 0cm 5.4pt; height: 20.1pt;">
+				<p class="MsoNormal" align="left">
+					<b>Срок обучения</b>
+				</p>
+			</td>
+			<td width="430" style="width: 322.25pt; border-color: currentcolor windowtext windowtext currentcolor; border-style: none solid solid none; border-width: medium 1pt 1pt medium; padding: 0cm 5.4pt; height: 20.1pt;">
+				<p class="MsoNormal" align="left">
+					<span style="font-size: 12pt; line-height: 115%;">4-6 месяцев</span>
+				</p>
+			</td>
+		</tr>
+		<tr style="height: 20.1pt;">
+			<td width="204" style="width: 152.65pt; border-color: currentcolor windowtext windowtext; border-style: none solid solid; border-width: medium 1pt 1pt; padding: 0cm 5.4pt; height: 20.1pt;">
+				<p class="MsoNormal" align="left">
+					<b>Форма обучения</b>
+				</p>
+			</td>
+			<td width="430" style="width: 322.25pt; border-color: currentcolor windowtext windowtext currentcolor; border-style: none solid solid none; border-width: medium 1pt 1pt medium; padding: 0cm 5.4pt; height: 20.1pt;">
+				<p class="MsoNormal" align="left">
+					<span style="font-size: 12pt; line-height: 115%; color: black;">очно-заочная</span>
+					<span style="font-size: 12pt; line-height: 115%;"/>
+				</p>
+			</td>
+		</tr>
+		<tr style="height: 20.1pt;">
+			<td width="204" style="width: 152.65pt; border-color: currentcolor black windowtext windowtext; border-style: none solid solid; border-width: medium 1pt 1pt; padding: 0cm 5.4pt; height: 20.1pt;">
+				<p class="MsoNormal" align="left">
+					<b>Режим занятий</b>
+				</p>
+			</td>
+			<td width="430" style="width: 322.25pt; border-color: currentcolor black windowtext currentcolor; border-style: none solid solid none; border-width: medium 1pt 1pt medium; padding: 0cm 5.4pt; height: 20.1pt;">
+				<p class="MsoNormal" align="left">
+					<span style="font-size: 12pt; line-height: 115%;">6-8 часов в день</span>
+				</p>
+			</td>
+		</tr>
+		<tr style="height: 20.1pt;">
+			<td width="204" style="width: 152.65pt; border-color: currentcolor black windowtext windowtext; border-style: none solid solid; border-width: medium 1pt 1pt; padding: 0cm 5.4pt; height: 20.1pt;">
+				<p class="MsoNormal" align="left">
+					<b>
+						<span style="font-size: 12pt; line-height: 115%;">Форма аттестации</span>
+					</b>
+					<b/>
+				</p>
+			</td>
+			<td width="430" style="width: 322.25pt; border-color: currentcolor black windowtext currentcolor; border-style: none solid solid none; border-width: medium 1pt 1pt medium; padding: 0cm 5.4pt; height: 20.1pt;">
+				<p class="MsoNormal" align="left">
+					<span style="font-size: 12pt; line-height: 115%;">экзамен</span>
+				</p>
+			</td>
+		</tr>
+		<tr style="height: 20.1pt;">
+			<td width="204" style="width: 152.65pt; border-color: currentcolor black windowtext windowtext; border-style: none solid solid; border-width: medium 1pt 1pt; padding: 0cm 5.4pt; height: 20.1pt;">
+				<p class="MsoNormal" align="left">
+					<b>
+						<span style="font-size: 12pt; line-height: 115%;">Стоимость обучения</span>
+					</b>
+				</p>
+			</td>
+			<td width="430" style="width: 322.25pt; border-color: currentcolor black windowtext currentcolor; border-style: none solid solid none; border-width: medium 1pt 1pt medium; padding: 0cm 5.4pt; height: 20.1pt;">
+				<p class="MsoNormal" align="left">27300 руб.</p>
+			</td>
+		</tr>
+		<tr style="height: 20.1pt;">
+			<td width="204" style="width: 152.65pt; border-color: currentcolor black windowtext windowtext; border-style: none solid solid; border-width: medium 1pt 1pt; padding: 0cm 5.4pt; height: 20.1pt;">
+				<p class="MsoNormal" align="left">
+					<b>
+						<span style="font-size: 12pt; line-height: 115%;">Документ по окончании​ обучения</span>
+					</b>
+				</p>
+			</td>
+			<td width="430" style="width: 322.25pt; border-color: currentcolor black windowtext currentcolor; border-style: none solid solid none; border-width: medium 1pt 1pt medium; padding: 0cm 5.4pt; height: 20.1pt;">
+				<p class="MsoNormal" align="left">диплом о профессиональной переподготовке установленного
+  образца </p>
+			</td>
+		</tr>
+	</tbody>
+</table>
+<div>
+
+</div>
+<p class="MsoNormal" style="text-align: justify;">
+	<span style="font-size: 12pt; line-height: 115%; font-family: arial, sans-serif;">​</span>
+</p>
+<div>
+
+</div>
+
+
+
+
+
+<div class="ms-rteElement-Callout4">
+					<div>Необходимые&#160;документы для поступления:</div>
+					<ul>
+						<li>
+							<a href="/fil/smolensk/dpo/Documents/anketa.docx" target="_blank">анкета</a>;</li>
+						<li>
+							<font color="#03497e">
+								<a href="/fil/smolensk/dpo/retraining/Documents/zayav-pp.docx" target="_blank">заявление</a>
+							</font>;</li>
+						<li>договоры:<ul>
+								<li>
+					<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Fiz_lico.docx">Физическое лицо</a>
+				</li>
+				<li>
+					<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Ur_lico.docx">Юридическое лицо</a>
+				</li>
+							</ul>
+						</li>
+						<li>другие документы (копия паспорта,&#160;копия документа&#160;об образовании,&#160;фотографии&#160;и&#160;др.)</li>
+					</ul>
+				</div>
+
+
+
+
+
+
+
+
+
+
+<div>
+
+</div>
+<p class="MsoNormal" style="text-align: justify;">
+	<b>
+		<span style="font-size: 14pt; line-height: 115%;">Перечень дисциплин </span>
+	</b>
+</p>
+<div>
+
+</div>
+<p class="MsoNormal" style="text-align: justify;">
+	<b>
+		<span style="font-size: 13pt; line-height: 115%;">Базовая часть</span>
+	</b>
+</p>
+<div>
+
+</div>
+<p class="MsoListParagraphCxSpFirst" style="margin-left: 39pt; text-align: justify; text-indent: -18pt;">
+	<b>
+		<span style="font-size: 12pt; line-height: 115%;">1.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
+			</span>
+		</span>
+	</b>
+	<span style="font-size: 12pt; line-height: 115%;">Экономическая теория</span>
+	<span style="font-size: 13pt; line-height: 115%;">.</span>
+	<b>
+		<span style="font-size: 12pt; line-height: 115%;"/>
+	</b>
+</p>
+<div>
+
+</div>
+<p class="MsoListParagraphCxSpMiddle" style="margin-left: 39pt; text-align: justify; text-indent: -18pt;">
+	<b>
+		<span style="font-size: 12pt; line-height: 115%;">2.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
+			</span>
+		</span>
+	</b>
+	<span style="font-size: 12pt; line-height: 115%;">Правовое регулирование финансово-банковской деятельности</span>
+	<span style="font-size: 13pt; line-height: 115%;">.</span>
+	<b>
+		<span style="font-size: 12pt; line-height: 115%;"/>
+	</b>
+</p>
+<div>
+
+</div>
+<p class="MsoListParagraphCxSpMiddle" style="margin-left: 39pt; text-align: justify; text-indent: -18pt;">
+	<b>
+		<span style="font-size: 12pt; line-height: 115%;">3.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
+			</span>
+		</span>
+	</b>
+	<span style="font-size: 12pt; line-height: 115%;">Налоги и налогообложение</span>
+	<b>
+		<span style="font-size: 12pt; line-height: 115%;"/>
+	</b>
+</p>
+<div>
+
+</div>
+<p class="MsoListParagraphCxSpMiddle" style="margin-left: 39pt; text-align: justify; text-indent: -18pt;">
+	<b>
+		<span style="font-size: 12pt; line-height: 115%;">4.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
+			</span>
+		</span>
+	</b>
+	<span style="font-size: 12pt; line-height: 115%;">Бухгалтерский учет</span>
+	<span style="font-size: 13pt; line-height: 115%;">.</span>
+	<b>
+		<span style="font-size: 12pt; line-height: 115%;"/>
+	</b>
+</p>
+<div>
+
+</div>
+<p class="MsoListParagraphCxSpMiddle" style="margin-left: 39pt; text-align: justify; text-indent: -18pt;">
+	<b>
+		<span style="font-size: 12pt; line-height: 115%;">5.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
+			</span>
+		</span>
+	</b>
+	<span style="font-size: 12pt; line-height: 115%;">Анализ деятельности экономических субъектов</span>
+	<span style="font-size: 13pt; line-height: 115%;">.</span>
+	<b>
+		<span style="font-size: 12pt; line-height: 115%;"/>
+	</b>
+</p>
+<div>
+
+</div>
+<p class="MsoListParagraphCxSpLast" style="margin-left: 39pt; text-align: justify; text-indent: -18pt;">
+	<b>
+		<span style="font-size: 12pt; line-height: 115%;">6.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
+			</span>
+		</span>
+	</b>
+	<span style="font-size: 12pt; line-height: 115%;">Деньги. Кредит. Банки</span>
+	<span style="font-size: 13pt; line-height: 115%;">.</span>
+	<b>
+		<span style="font-size: 12pt; line-height: 115%;"/>
+	</b>
+</p>
+<div>
+
+</div>
+<p class="MsoNormal" style="text-align: justify;">
+	<b>
+		<span style="font-size: 13pt; line-height: 115%;">Профильная часть</span>
+	</b>
+</p>
+<div>
+
+</div>
+<p class="MsoListParagraphCxSpFirst" style="text-align: justify; text-indent: -18pt;">
+	<b>
+		<span style="font-size: 12pt; line-height: 115%;">&#160; &#160; &#160; &#160; &#160; &#160;1.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
+			</span>
+		</span>
+	</b>
+	<span style="font-size: 12pt; line-height: 115%;">Финансы</span>
+	<span style="font-size: 13pt; line-height: 115%;">.</span>
+	<b>
+		<span style="font-size: 12pt; line-height: 115%;"/>
+	</b>
+</p>
+<div>
+
+</div>
+<p class="MsoListParagraphCxSpMiddle" style="text-align: justify; text-indent: -18pt;">
+	<b>
+		<span style="font-size: 12pt; line-height: 115%;">&#160; &#160; &#160; &#160; &#160; &#160;2.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
+			</span>
+		</span>
+	</b>
+	<span style="font-size: 12pt; line-height: 115%;">Финансовая политика хозяйствующих субъектов</span>
+	<span style="font-size: 13pt; line-height: 115%;">.</span>
+	<b>
+		<span style="font-size: 12pt; line-height: 115%;"/>
+	</b>
+</p>
+<div>
+
+</div>
+<p class="MsoListParagraphCxSpMiddle" style="text-align: justify; text-indent: -18pt;">
+	<b>
+		<span style="font-size: 12pt; line-height: 115%;">&#160; &#160; &#160; &#160; &#160; &#160;3.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
+			</span>
+		</span>
+	</b>
+	<span style="font-size: 12pt; line-height: 115%;">Банковское дело</span>
+	<span style="font-size: 13pt; line-height: 115%;">.</span>
+	<b>
+		<span style="font-size: 12pt; line-height: 115%;"/>
+	</b>
+</p>
+<div>
+
+</div>
+<p class="MsoListParagraphCxSpMiddle" style="text-align: justify; text-indent: -18pt;">
+	<b>
+		<span style="font-size: 12pt; line-height: 115%;">&#160; &#160; &#160; &#160; &#160; &#160;4.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
+			</span>
+		</span>
+	</b>
+	<span style="font-size: 12pt; line-height: 115%;">Финансовый менеджмент</span>
+	<span style="font-size: 13pt; line-height: 115%;">.</span>
+	<b>
+		<span style="font-size: 12pt; line-height: 115%;"/>
+	</b>
+</p>
+<div>
+
+</div>
+<p class="MsoListParagraphCxSpMiddle" style="text-align: justify; text-indent: -18pt;">
+	<b>
+		<span style="font-size: 12pt; line-height: 115%;">&#160; &#160; &#160; &#160; &#160; &#160;5.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
+			</span>
+		</span>
+	</b>
+	<span style="font-size: 12pt; line-height: 115%;">Финансовые рынки</span>
+	<span style="font-size: 13pt; line-height: 115%;">.</span>
+	<b>
+		<span style="font-size: 12pt; line-height: 115%;"/>
+	</b>
+</p>
+<div>
+
+</div>
+<p class="MsoListParagraphCxSpMiddle" style="text-align: justify; text-indent: -18pt;">
+	<b>
+		<span style="font-size: 12pt; line-height: 115%;">&#160; &#160; &#160; &#160; &#160; &#160;6.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
+			</span>
+		</span>
+	</b>
+	<span style="font-size: 12pt; line-height: 115%;">Инвестиционный анализ.</span>
+	<b>
+		<span style="font-size: 12pt; line-height: 115%;"/>
+	</b>
+</p>
+<div>
+
+</div>
+<p class="MsoListParagraphCxSpMiddle" style="text-align: justify; text-indent: -18pt;">
+	<b>
+		<span style="font-size: 12pt; line-height: 115%;">&#160; &#160; &#160; &#160; &#160; &#160;7.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
+			</span>
+		</span>
+	</b>
+	<span style="font-size: 12pt; line-height: 115%;">Оценка и анализ финансовых рисков.</span>
+	<b>
+		<span style="font-size: 12pt; line-height: 115%;"/>
+	</b>
+</p>
+<div>
+
+</div>
+<p class="MsoListParagraphCxSpMiddle" style="text-align: justify; text-indent: -18pt;">
+	<b>
+		<span style="font-size: 12pt; line-height: 115%;">&#160; &#160; &#160; &#160; &#160; &#160;8.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
+			</span>
+		</span>
+	</b>
+	<span style="font-size: 12pt; line-height: 115%;">Страховое дело.</span>
+	<b>
+		<span style="font-size: 12pt; line-height: 115%;"/>
+	</b>
+</p>
+<div>
+
+</div>
+<p class="MsoListParagraphCxSpLast" style="text-align: left; text-indent: -18pt;">
+	<b>
+		<span style="font-size: 12pt; line-height: 115%;">&#160; &#160; &#160; &#160; &#160;​9.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
+			</span>
+		</span>
+	</b>
+	<span style="font-size: 12pt; line-height: 115%;">Функционально-ориентированные информационные технологии в подготовке финансово-банковских
+специалистов.​</span>
+	<b>
+		<span style="font-size: 12pt; line-height: 115%;"/>
+	</b>​</p>
