--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/per_vsfer_prof.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/per_vsfer_prof.html
@@ -1,10 +1,336 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<div style="text-align: center;">
+	<b class="ms-rteThemeForeColor-5-4" style="font-size: 11pt; background-color: transparent;">
+		<span style="font-size: 14pt; line-height: 115%;">​</span>
+	</b>
+</div>
+<div style="text-align: center;">
+	<b class="ms-rteThemeForeColor-5-4" style="font-size: 11pt; background-color: transparent;">
+		<span style="font-size: 14pt; line-height: 115%;">Цель программы</span>
+	</b>
+</div>
+<div>
+	<span class="ms-rteThemeForeColor-5-4" style="font-size: 14pt; text-align: justify; text-indent: 35.45pt; background-color: transparent;">
+		<br/>
+	</span>
+</div>
+<div>
+	<b class="ms-rteThemeForeColor-5-4" style="font-size: 11pt; background-color: transparent;">
+		<span style="font-size: 14pt; line-height: 115%;"/>
+	</b>
+	<span class="ms-rteThemeForeColor-5-4" style="font-size: 14pt; text-align: justify; text-indent: 35.45pt; background-color: transparent;">Подготовка специалистов в ​области
+профессионального&#160; перевода&#160;&#160; (устного и письменного)&#160; в сочетании с изучением теории языка и теории
+перевода, общее совершенствование языковой&#160;
+и&#160;&#160; межкультурной компетенций&#160; для повышения эффективности коммуникации в
+сфере профессиональной деятельности.</span>
 
-</body>
-</html>
+	<p class="MsoNormal" align="left">
+		<br/>
+	</p>
+	<p class="MsoNormal" align="left">
+		<span style="font-size: 14pt; line-height: 115%;">
+			<a href="/fil/smolensk/dpo/retraining/Documents/%D0%9F%D0%A0%D0%9E%D0%A4%D1%81%D1%82%D0%B0%D0%BD%D0%B4%D0%B0%D1%80%D1%82%D1%8B_%D0%9F%D0%B5%D1%80%D0%B5%D0%B2%D0%BE%D0%B4%D1%87%D0%B8%D0%BA.pdf">Профессиональные компетенции​</a>
+		</span>
+	</p>
+
+	<p class="MsoNormal" style="margin-bottom: 0.0001pt; text-align: justify; line-height: normal;">
+		<b>
+			<span style="font-size: 14pt;">Краткая информация</span>
+		</b>
+	</p>
+
+	<p class="MsoNormal" style="text-align: justify;">
+		<span style="font-size: 12pt; line-height: 115%;">&#160;</span>
+	</p>
+
+	<table class="MsoNormalTable" width="633" cellspacing="0" cellpadding="0" border="0" style="width: 474.9pt; margin-left: -8.8pt;">
+		<tbody>
+			<tr style="height: 27.75pt;">
+				<td width="204" style="width: 152.65pt; border: 1pt solid windowtext; padding: 0cm 5.4pt; height: 27.75pt;">
+					<p class="MsoNormal" align="left">
+						<b>Категория
+  слушателей</b>
+					</p>
+				</td>
+				<td width="430" style="width: 322.25pt; border-color: windowtext windowtext windowtext currentcolor; border-style: solid solid solid none; border-width: 1pt 1pt 1pt medium; padding: 0cm 5.4pt; height: 27.75pt;">
+					<p class="MsoNormal" align="left">
+						<span style="font-size: 13pt; line-height: 115%;">Специалисты с высшим&#160; образованием, уровень владения языком А2 (</span>
+						<span lang="EN-US" style="font-size: 13pt; line-height: 115%;">Waystage</span>
+						<span style="font-size: 13pt; line-height: 115%;">)</span>
+					</p>
+				</td>
+			</tr>
+			<tr style="height: 20.1pt;">
+				<td width="204" style="width: 152.65pt; border-color: currentcolor windowtext windowtext; border-style: none solid solid; border-width: medium 1pt 1pt; padding: 0cm 5.4pt; height: 20.1pt;">
+					<p class="MsoNormal" align="left">
+						<b>Срок обучения</b>
+					</p>
+				</td>
+				<td width="430" style="width: 322.25pt; border-color: currentcolor windowtext windowtext currentcolor; border-style: none solid solid none; border-width: medium 1pt 1pt medium; padding: 0cm 5.4pt; height: 20.1pt;">
+					<p class="MsoNormal" align="left">
+						<span lang="EN-US" style="font-size: 13pt; line-height: 115%;">2</span>
+						<span lang="EN-US" style="font-size: 13pt; line-height: 115%;"> </span>
+						<span style="font-size: 13pt; line-height: 115%;">года</span>
+					</p>
+				</td>
+			</tr>
+			<tr style="height: 20.1pt;">
+				<td width="204" style="width: 152.65pt; border-color: currentcolor windowtext windowtext; border-style: none solid solid; border-width: medium 1pt 1pt; padding: 0cm 5.4pt; height: 20.1pt;">
+					<p class="MsoNormal" align="left">
+						<b>Форма обучения</b>
+					</p>
+				</td>
+				<td width="430" style="width: 322.25pt; border-color: currentcolor windowtext windowtext currentcolor; border-style: none solid solid none; border-width: medium 1pt 1pt medium; padding: 0cm 5.4pt; height: 20.1pt;">
+					<p class="MsoNormal" align="left">
+						<span style="font-size: 12pt; line-height: 115%; color: black;">очно-заочная</span>
+						<span style="font-size: 12pt; line-height: 115%;"/>
+					</p>
+				</td>
+			</tr>
+			<tr style="height: 20.1pt;">
+				<td width="204" style="width: 152.65pt; border-color: currentcolor black windowtext windowtext; border-style: none solid solid; border-width: medium 1pt 1pt; padding: 0cm 5.4pt; height: 20.1pt;">
+					<p class="MsoNormal" align="left">
+						<b>Режим занятий</b>
+					</p>
+				</td>
+				<td width="430" style="width: 322.25pt; border-color: currentcolor black windowtext currentcolor; border-style: none solid solid none; border-width: medium 1pt 1pt medium; padding: 0cm 5.4pt; height: 20.1pt;">
+					<p class="MsoNormal" align="left">
+						<span style="font-size: 12pt; line-height: 115%;">6-8 часов в день</span>
+					</p>
+				</td>
+			</tr>
+			<tr style="height: 20.1pt;">
+				<td width="204" style="width: 152.65pt; border-color: currentcolor black windowtext windowtext; border-style: none solid solid; border-width: medium 1pt 1pt; padding: 0cm 5.4pt; height: 20.1pt;">
+					<p class="MsoNormal" align="left">
+						<b>
+							<span style="font-size: 12pt; line-height: 115%;">Форма аттестации</span>
+						</b>
+						<b/>
+					</p>
+				</td>
+				<td width="430" style="width: 322.25pt; border-color: currentcolor black windowtext currentcolor; border-style: none solid solid none; border-width: medium 1pt 1pt medium; padding: 0cm 5.4pt; height: 20.1pt;">
+					<p class="MsoNormal" align="left">
+						<span style="font-size: 13pt; line-height: 115%;">квалификационный</span>
+						<span style="font-size: 12pt; line-height: 115%;">
+  экзамен</span>
+					</p>
+				</td>
+			</tr>
+			<tr style="height: 20.1pt;">
+				<td width="204" style="width: 152.65pt; border-color: currentcolor black windowtext windowtext; border-style: none solid solid; border-width: medium 1pt 1pt; padding: 0cm 5.4pt; height: 20.1pt;">
+					<p class="MsoNormal" align="left">
+						<b>
+							<span style="font-size: 12pt; line-height: 115%;">Стоимость обучения</span>
+						</b>
+					</p>
+				</td>
+				<td width="430" style="width: 322.25pt; border-color: currentcolor black windowtext currentcolor; border-style: none solid solid none; border-width: medium 1pt 1pt medium; padding: 0cm 5.4pt; height: 20.1pt;">
+					<p class="MsoNormal" align="left">38000 руб. (ежегодно)</p>
+				</td>
+			</tr>
+			<tr style="height: 20.1pt;">
+				<td width="204" style="width: 152.65pt; border-color: currentcolor black windowtext windowtext; border-style: none solid solid; border-width: medium 1pt 1pt; padding: 0cm 5.4pt; height: 20.1pt;">
+					<p class="MsoNormal" align="left">
+						<b>
+							<span style="font-size: 12pt; line-height: 115%;">Документ по окончании​ обучения</span>
+						</b>
+					</p>
+				</td>
+				<td width="430" style="width: 322.25pt; border-color: currentcolor black windowtext currentcolor; border-style: none solid solid none; border-width: medium 1pt 1pt medium; padding: 0cm 5.4pt; height: 20.1pt;">
+					<p class="MsoNormal" align="left">диплом о профессиональной переподготовке установленного
+  образца (с присвоением новой квалификации)</p>
+				</td>
+			</tr>
+		</tbody>
+	</table>
+
+	<p class="MsoNormal" style="text-align: justify;">
+		<span style="font-size: 12pt; line-height: 115%; font-family: arial, sans-serif;">​</span>
+	</p>
+
+	<p class="MsoNormal" style="text-align: justify;">
+		<b>
+			<span style="font-size: 14pt; line-height: 115%;">Необходимые документы для поступления:</span>
+		</b>
+	</p>
+	<p class="MsoNormal" style="text-align: justify;">
+		<span style="text-indent: -18pt; background-color: transparent; font-size: 14pt; line-height: 115%; font-family: symbol;">&#160; &#160; &#160; &#160;·<span style="font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;&#160;&#160;
+			</span>
+		</span>
+		<span style="text-indent: -18pt; background-color: transparent; font-size: 12pt; line-height: 115%;">анкета;</span>
+	</p>
+	<p class="MsoNormal" style="text-align: justify;">
+		<span style="text-indent: -18pt; background-color: transparent; font-size: 12pt; line-height: 115%;"/>
+		<span style="text-indent: -18pt; background-color: transparent; font-size: 14pt; line-height: 115%; font-family: symbol;">&#160; &#160; &#160; &#160;·<span style="font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;&#160;&#160;
+			</span>
+		</span>
+		<span style="text-indent: -18pt; background-color: transparent; font-size: 12pt; line-height: 115%;">заявление;</span>
+	</p>
+	<p class="MsoNormal" style="text-align: justify;">
+		<span style="text-indent: -18pt; background-color: transparent; font-size: 12pt; line-height: 115%;"/>
+		<span style="text-indent: -18pt; background-color: transparent; font-size: 14pt; line-height: 115%; font-family: symbol;">&#160; &#160; &#160; &#160;·<span style="font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;&#160;&#160;
+			</span>
+		</span>
+		<span style="text-indent: -18pt; background-color: transparent; font-size: 12pt; line-height: 115%;">договор</span>
+		<span style="text-indent: -18pt; background-color: transparent; font-size: 12pt; line-height: 115%;">;</span>
+	</p>
+	<p class="MsoNormal" style="text-align: justify;">
+		<span style="text-indent: -18pt; background-color: transparent; font-size: 12pt; line-height: 115%;"/>
+		<span style="text-indent: -18pt; background-color: transparent; font-size: 14pt; line-height: 115%; font-family: symbol;">&#160; &#160; &#160; ·<span style="font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;&#160;&#160;
+			</span>
+		</span>
+		<span style="text-indent: -18pt; background-color: transparent; font-size: 12pt; line-height: 115%;">другие документы (копия паспорта, копия
+документа об образовании, фотографии и др.)</span>
+	</p>
+
+	<p class="MsoNormal" style="text-align: justify;">
+		<b>
+			<span style="font-size: 14pt; line-height: 115%;">Перечень дисциплин </span>
+		</b>
+	</p>
+
+	<p class="MsoNormal" style="text-align: justify;">
+		<b>
+			<span style="font-size: 13pt; line-height: 115%;">Базовая часть</span>
+		</b>
+	</p>
+
+	<p class="MsoListParagraphCxSpFirst" style="margin-left: 39pt; text-align: justify; text-indent: -18pt;">
+		<b>
+			<span style="font-size: 12pt; line-height: 115%;">1.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
+				</span>
+			</span>
+		</b>
+		<span style="font-size: 13pt; line-height: 115%;">Введение в языкознание.</span>
+		<b>
+			<span style="font-size: 12pt; line-height: 115%;"/>
+		</b>
+	</p>
+
+	<p class="MsoListParagraphCxSpMiddle" style="margin-left: 39pt; text-align: justify; text-indent: -18pt;">
+		<b>
+			<span style="font-size: 12pt; line-height: 115%;">2.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
+				</span>
+			</span>
+		</b>
+		<span style="font-size: 13pt; line-height: 115%;">Теоретическая грамматика.</span>
+		<b>
+			<span style="font-size: 12pt; line-height: 115%;"/>
+		</b>
+	</p>
+
+	<p class="MsoListParagraphCxSpMiddle" style="margin-left: 39pt; text-align: justify; text-indent: -18pt;">
+		<b>
+			<span style="font-size: 12pt; line-height: 115%;">3.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
+				</span>
+			</span>
+		</b>
+		<span style="font-size: 13pt; line-height: 115%;">Лексикология</span>
+		<b>
+			<span style="font-size: 12pt; line-height: 115%;"/>
+		</b>
+	</p>
+
+	<p class="MsoListParagraphCxSpMiddle" style="margin-left: 39pt; text-align: justify; text-indent: -18pt;">
+		<b>
+			<span style="font-size: 12pt; line-height: 115%;">4.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
+				</span>
+			</span>
+		</b>
+		<span style="font-size: 13pt; line-height: 115%;">Стилистика, изучаемого языка (английского).</span>
+		<b>
+			<span style="font-size: 12pt; line-height: 115%;"/>
+		</b>
+	</p>
+
+	<p class="MsoListParagraphCxSpMiddle" style="margin-left: 39pt; text-align: justify; text-indent: -18pt;">
+		<b>
+			<span style="font-size: 12pt; line-height: 115%;">5.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
+				</span>
+			</span>
+		</b>
+		<span style="font-size: 13pt; line-height: 115%;">Практический курс иностранного языка (английского).</span>
+		<b>
+			<span style="font-size: 12pt; line-height: 115%;"/>
+		</b>
+	</p>
+
+	<p class="MsoListParagraphCxSpLast" style="margin-left: 39pt; text-align: justify; text-indent: -18pt;">
+		<b>
+			<span style="font-size: 12pt; line-height: 115%;">6.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
+				</span>
+			</span>
+		</b>
+		<span style="font-size: 13pt; line-height: 115%;">Стилистика русского языка и культура речи.</span>
+		<b>
+			<span style="font-size: 12pt; line-height: 115%;"/>
+		</b>
+	</p>
+
+	<p class="MsoNormal" style="text-align: justify;">
+		<b>
+			<span style="font-size: 13pt; line-height: 115%;">Профильная часть</span>
+		</b>
+	</p>
+
+	<p class="MsoListParagraphCxSpFirst" style="text-align: justify; text-indent: -18pt;">
+		<b>
+			<span style="font-size: 12pt; line-height: 115%;">&#160; &#160; &#160; &#160; &#160; &#160;1.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
+				</span>
+			</span>
+		</b>
+		<span style="font-size: 13pt; line-height: 115%;">Теория перевода.</span>
+		<b>
+			<span style="font-size: 12pt; line-height: 115%;"/>
+		</b>
+	</p>
+
+	<p class="MsoListParagraphCxSpMiddle" style="text-align: justify; text-indent: -18pt;">
+		<b>
+			<span style="font-size: 12pt; line-height: 115%;">&#160; &#160; &#160; &#160; &#160; &#160;2.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
+				</span>
+			</span>
+		</b>
+		<span style="font-size: 13pt; line-height: 115%;">Практический курс профессионально ориентированного
+перевода.</span>
+		<b>
+			<span style="font-size: 12pt; line-height: 115%;"/>
+		</b>
+	</p>
+
+	<p class="MsoListParagraphCxSpMiddle" style="text-align: justify; text-indent: -18pt;">
+		<b>
+			<span style="font-size: 12pt; line-height: 115%;">&#160; &#160; &#160; &#160; &#160; &#160;3.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
+				</span>
+			</span>
+		</b>
+		<span style="font-size: 13pt; line-height: 115%;">Деловой иностранный язык (английский).</span>
+		<b>
+			<span style="font-size: 12pt; line-height: 115%;"/>
+		</b>
+	</p>
+
+	<p class="MsoListParagraphCxSpMiddle" style="text-align: justify; text-indent: -18pt;">
+		<b>
+			<span style="font-size: 12pt; line-height: 115%;">&#160; &#160; &#160; &#160; &#160; &#160;4.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
+				</span>
+			</span>
+		</b>
+		<span style="font-size: 13pt; line-height: 115%;">Практикум по переводу.</span>
+		<b>
+			<span style="font-size: 12pt; line-height: 115%;"/>
+		</b>
+	</p>
+
+	<p class="MsoListParagraphCxSpLast" style="text-align: justify; text-indent: -18pt;">
+		<b>
+			<span style="font-size: 12pt; line-height: 115%;">&#160; &#160; &#160; &#160; &#160; &#160;5.<span style="font-weight: normal; font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;
+				</span>
+			</span>
+		</b>
+		<span style="font-size: 13pt; line-height: 115%;">Лингвострановедение.</span>
+		<b>
+			<span style="font-size: 12pt; line-height: 115%;"/>
+		</b>
+	</p>
+​</div>
+​
