--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/prav_reg.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/prav_reg.html
@@ -1,10 +1,467 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<div class="ms-rteElement-Callout2">
+	<h3 class="ms-rteElement-H3B">Цель программы</h3>
+	<p>
 
-</body>
-</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+	</p>
+	<p>
+		<span>
+			<span>Формирование новых профессиональных компетенций, требуемых для выполнения
+нового вида профессиональной деятельности в сфере правового регулирования
+деятельности организации</span>
+		</span>
+		<span>.</span>
+	</p>
+
+
+
+
+
+	<p>
+		<a href="/fil/smolensk/dpo/retraining/Documents/%D0%9F%D1%80%D0%BE%D1%84%D0%B5%D1%81%D1%81%D0%B8%D0%BE%D0%BD%D0%B0%D0%BB%D1%8C%D0%BD%D0%B0%D0%B5%20%D0%BA%D0%BE%D0%BC%D0%BF%D0%B5%D1%82%D0%B5%D0%BD%D1%86%D0%B8%D0%B8%20%D0%9F%D0%A0%20.pdf">
+			<img class="ms-asset-icon ms-rtePosition-4" src="/_layouts/images/icpdf.png" alt=""/>
+			<span>Профессиональные компетенции</span>
+		</a>
+		<br/>
+	</p>
+</div>
+<a href="/fil/smolensk/dpo/retraining/Documents/finmen.pdf">
+
+​</a>
+<h3 class="ms-rteElement-H3B">Краткая информация</h3>
+<table class="ms-rteTable-1" width="100%" cellspacing="0">
+	<tbody>
+		<tr class="ms-rteTableEvenRow-1">
+			<td class="ms-rteTableEvenCol-1" rowspan="1" colspan="1">
+				<p class="ms-rteElement-P">
+					<strong>Категория слушателей</strong>
+				</p>
+			</td>
+			<td class="ms-rteTableOddCol-1" rowspan="1" colspan="1">
+				<ul>
+					<li>
+						<div class="ms-rteElement-P">лица, имеющие среднее профессиональное или высшее образование;</div>
+					</li>
+					<li>
+						<div class="ms-rteElement-P">лица, получающие высшее образование</div>
+					</li>
+				</ul>
+			</td>
+		</tr>
+		<tr class="ms-rteTableOddRow-1">
+			<td class="ms-rteTableEvenCol-1" rowspan="1" colspan="1">
+				<p class="ms-rteElement-P">
+					<strong>​Срок обучения</strong>
+				</p>
+			</td>
+			<td class="ms-rteTableOddCol-1">
+				<p class="ms-rteElement-P">7-8 месяцев</p>
+			</td>
+		</tr>
+		<tr class="ms-rteTableEvenRow-1">
+			<td class="ms-rteTableEvenCol-1" rowspan="1" colspan="1">
+				<p class="ms-rteElement-P">
+					<strong>​Форма обучения</strong>
+				</p>
+			</td>
+			<td class="ms-rteTableOddCol-1">
+				<p class="ms-rteElement-P">​очно-заочная</p>
+			</td>
+		</tr>
+		<tr class="ms-rteTableOddRow-1">
+			<td class="ms-rteTableEvenCol-1" rowspan="1" colspan="1">
+				<p class="ms-rteElement-P">
+					<strong>​Режим занятий</strong>
+				</p>
+			</td>
+			<td class="ms-rteTableOddCol-1">
+
+
+
+
+
+
+
+
+
+
+
+				<ul>
+					<li>
+						<span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">2-3 будних дня в неделю&#160;с 18.30 до 21.30</span>
+					</li>
+					<li>
+
+						<span style="font-size: 12pt; line-height: 107%; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">в субботу с 10.00 до 13.00.</span>
+
+
+
+					</li>
+				</ul>
+			</td>
+		</tr>
+		<tr class="ms-rteTableEvenRow-1">
+			<td class="ms-rteTableEvenCol-1" rowspan="1" colspan="1">
+				<p class="ms-rteElement-P">
+					<strong>​Форма аттестации</strong>
+				</p>
+			</td>
+			<td class="ms-rteTableOddCol-1" rowspan="1">
+				<p class="ms-rteElement-P">итоговый экзамен<br/>
+				</p>
+			</td>
+		</tr>
+		<tr class="ms-rteTableOddRow-1">
+			<td class="ms-rteTableEvenCol-1" rowspan="1" colspan="1">
+				<p class="ms-rteElement-P">
+					<strong>​Стоимость обучения</strong>
+				</p>
+			</td>
+			<td class="ms-rteTableOddCol-1">
+				<p class="ms-rteElement-P">​35 000 руб. (<a href="/fil/smolensk/dpo/retraining/Documents/bank_smolensk.pdf" target="_blank">скачать реквизиты оплаты</a>)</p>
+			</td>
+		</tr>
+		<tr class="ms-rteTableEvenRow-1">
+			<td class="ms-rteTableEvenCol-1" rowspan="1" colspan="1">
+				<p class="ms-rteElement-P">
+					<strong>Документ&#160;по окончании​ обучения</strong>
+				</p>
+			</td>
+			<td class="ms-rteTableOddCol-1" rowspan="1">
+				<p class="ms-rteElement-P">
+					<a href="/fil/smolensk/dpo/retraining/PublishingImages/diplom.jpg" target="_blank">диплом о профессиональной&#160;переподготовке</a>&#160;установленного образца​</p>
+			</td>
+		</tr>
+	</tbody>
+</table>
+
+<div>
+	<div class="ms-rteElement-Callout4">
+		<div>Необходимые&#160;документы для поступления:</div>
+		<ul>
+			<li>
+				<a href="/fil/smolensk/dpo/Documents/anketa.docx" target="_blank">анкета</a>;</li>
+			<li>
+				<font color="#03497e">
+					<a href="/fil/smolensk/dpo/retraining/Documents/zayav-pp.docx" target="_blank">заявление</a>
+				</font>;</li>
+			<li>договоры:<ul>
+					<li>
+					<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Fiz_lico.docx">Физическое лицо</a>
+				</li>
+				<li>
+					<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Ur_lico.docx">Юридическое лицо</a>
+				</li>
+				</ul>
+			</li>
+			<li>другие документы (копия паспорта,&#160;копия документа&#160;об образовании,&#160;фотографии&#160;и&#160;др.)</li>
+		</ul>
+	</div>
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	<h3 class="ms-rteElement-H3B">
+
+
+
+
+
+
+
+
+
+
+
+		<style>
+.ExternalClass p.MsoNormal, .ExternalClass li.MsoNormal, .ExternalClass div.MsoNormal
+{margin:0cm;margin-bottom:.0001pt;text-align:center;text-indent:24.1pt;line-height:107%;font-size:11.0pt;font-family:"Calibri","sans-serif";}
+.ExternalClass p.MsoListParagraph, .ExternalClass li.MsoListParagraph, .ExternalClass div.MsoListParagraph
+{margin-top:0cm;margin-right:0cm;margin-bottom:0cm;margin-left:36.0pt;margin-bottom:.0001pt;text-align:center;text-indent:24.1pt;line-height:107%;font-size:11.0pt;font-family:"Calibri","sans-serif";}
+.ExternalClass p.MsoListParagraphCxSpFirst, .ExternalClass li.MsoListParagraphCxSpFirst, .ExternalClass div.MsoListParagraphCxSpFirst
+{margin-top:0cm;margin-right:0cm;margin-bottom:0cm;margin-left:36.0pt;margin-bottom:.0001pt;text-align:center;text-indent:24.1pt;line-height:107%;font-size:11.0pt;font-family:"Calibri","sans-serif";}
+.ExternalClass p.MsoListParagraphCxSpMiddle, .ExternalClass li.MsoListParagraphCxSpMiddle, .ExternalClass div.MsoListParagraphCxSpMiddle
+{margin-top:0cm;margin-right:0cm;margin-bottom:0cm;margin-left:36.0pt;margin-bottom:.0001pt;text-align:center;text-indent:24.1pt;line-height:107%;font-size:11.0pt;font-family:"Calibri","sans-serif";}
+.ExternalClass p.MsoListParagraphCxSpLast, .ExternalClass li.MsoListParagraphCxSpLast, .ExternalClass div.MsoListParagraphCxSpLast
+{margin-top:0cm;margin-right:0cm;margin-bottom:0cm;margin-left:36.0pt;margin-bottom:.0001pt;text-align:center;text-indent:24.1pt;line-height:107%;font-size:11.0pt;font-family:"Calibri","sans-serif";}
+.ExternalClass .MsoChpDefault
+{font-family:"Calibri","sans-serif";}
+.ExternalClass .MsoPapDefault
+{text-align:center;text-indent:24.1pt;line-height:107%;}
+@page WordSection1
+{size:612.0pt 792.0pt;margin:2.0cm 42.5pt 2.0cm 3.0cm;}
+.ExternalClass div.WordSection1
+{page:WordSection1;}
+.ExternalClass ol
+{margin-bottom:0cm;}
+.ExternalClass ul
+{margin-bottom:0cm;}
+		</style>
+
+
+
+
+
+
+	</h3>
+	<p class="MsoNormal" align="left" style="margin-bottom: 6pt; text-align: left; text-indent: 0cm; line-height: normal; background: white none repeat scroll 0% 0%;">
+		<b>
+			<span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Перечень модулей, дисциплин</span>
+		</b>
+	</p>
+
+	<p class="MsoNormal" align="left" style="margin: 6pt 0cm; text-align: left; text-indent: 0cm; line-height: normal; background: white none repeat scroll 0% 0%;">
+		<b>
+			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Модуль 1. Базовые
+дисциплины</span>
+		</b>
+	</p>
+
+	<p class="MsoListParagraphCxSpFirst" align="left" style="margin-left: 35.7pt; text-align: left; text-indent: -17.85pt; line-height: normal; background: white none repeat scroll 0% 0%;">
+		<b>
+			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
+				<span>1.<span style="font: 7pt &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160; </span>
+				</span>
+			</span>
+		</b>
+		<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Теория государства<span>&#160; </span>и права.</span>
+	</p>
+
+	<p class="MsoListParagraphCxSpMiddle" align="left" style="text-align: left; text-indent: -18pt; line-height: normal; background: white none repeat scroll 0% 0%;">
+		<b>
+			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
+				<span>2.<span style="font: 7pt &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160; </span>
+				</span>
+			</span>
+		</b>
+		<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Конституционное<span>&#160; </span>право</span>
+		<span lang="EN-US" style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;"> России</span>
+		<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">.</span>
+	</p>
+
+	<p class="MsoListParagraphCxSpMiddle" align="left" style="text-align: left; text-indent: -18pt; line-height: normal; background: white none repeat scroll 0% 0%;">
+		<b>
+			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
+				<span>3.<span style="font: 7pt &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160; </span>
+				</span>
+			</span>
+		</b>
+		<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Юридическая
+служба </span>
+		<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">предприятий, организаций и учреждений.</span>
+		<b>
+			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;"/>
+		</b>
+	</p>
+
+	<p class="MsoListParagraphCxSpMiddle" align="left" style="text-align: left; text-indent: -18pt; line-height: normal; background: white none repeat scroll 0% 0%;">
+		<b>
+			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
+				<span>4.<span style="font: 7pt &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160; </span>
+				</span>
+			</span>
+		</b>
+		<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Информационные технологии в
+юридической деятельности.</span>
+	</p>
+
+	<p class="MsoListParagraphCxSpLast" align="left" style="margin: 6pt 0cm 6pt 35.7pt; text-align: left; text-indent: -17.85pt; line-height: normal; background: white none repeat scroll 0% 0%;">
+		<b>
+			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
+				<span>5.<span style="font: 7pt &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160; </span>
+				</span>
+			</span>
+		</b>
+		<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Профессиональная этика.</span>
+	</p>
+
+	<p class="MsoNormal" align="left" style="text-align: left; text-indent: 0cm; line-height: normal; background: white none repeat scroll 0% 0%;">
+		<b>
+			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Модуль 2.
+Специальные дисциплины</span>
+		</b>
+	</p>
+
+	<p class="MsoListParagraphCxSpFirst" align="left" style="margin: 3pt 0cm 0.0001pt 35.7pt; text-align: left; text-indent: -17.85pt; line-height: normal; background: white none repeat scroll 0% 0%;">
+		<b>
+			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
+				<span>1.<span style="font: 7pt &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160; </span>
+				</span>
+			</span>
+		</b>
+		<span lang="EN-US" style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Муниципальное
+право России</span>
+		<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">.</span>
+	</p>
+
+	<p class="MsoListParagraphCxSpMiddle" align="left" style="text-align: left; text-indent: -18pt; line-height: normal; background: white none repeat scroll 0% 0%;">
+		<b>
+			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
+				<span>2.<span style="font: 7pt &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160; </span>
+				</span>
+			</span>
+		</b>
+		<span lang="EN-US" style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Трудовое
+право</span>
+		<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">.</span>
+	</p>
+
+	<p class="MsoListParagraphCxSpMiddle" align="left" style="text-align: left; text-indent: -18pt; line-height: normal; background: white none repeat scroll 0% 0%;">
+		<b>
+			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
+				<span>3.<span style="font: 7pt &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160; </span>
+				</span>
+			</span>
+		</b>
+		<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Гражданское
+право.</span>
+		<b>
+			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;"/>
+		</b>
+	</p>
+
+	<p class="MsoListParagraphCxSpMiddle" align="left" style="text-align: left; text-indent: -18pt; line-height: normal; background: white none repeat scroll 0% 0%;">
+		<b>
+			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
+				<span>4.<span style="font: 7pt &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160; </span>
+				</span>
+			</span>
+		</b>
+		<span lang="EN-US" style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Г</span>
+		<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">ражданский процесс.</span>
+	</p>
+
+	<p class="MsoListParagraphCxSpMiddle" align="left" style="text-align: left; text-indent: -18pt; line-height: normal; background: white none repeat scroll 0% 0%;">
+		<b>
+			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
+				<span>5.<span style="font: 7pt &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160; </span>
+				</span>
+			</span>
+		</b>
+		<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Уголовное
+право.</span>
+		<b>
+			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;"/>
+		</b>
+	</p>
+
+	<p class="MsoListParagraphCxSpMiddle" align="left" style="text-align: left; text-indent: -18pt; line-height: normal; background: white none repeat scroll 0% 0%;">
+		<b>
+			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
+				<span>6.<span style="font: 7pt &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160; </span>
+				</span>
+			</span>
+		</b>
+		<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Уголовный
+процесс.</span>
+		<b>
+			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;"/>
+		</b>
+	</p>
+
+	<p class="MsoListParagraphCxSpMiddle" align="left" style="text-align: left; text-indent: -18pt; line-height: normal; background: white none repeat scroll 0% 0%;">
+		<b>
+			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
+				<span>7.<span style="font: 7pt &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160; </span>
+				</span>
+			</span>
+		</b>
+		<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Арбитражный процесс.</span>
+	</p>
+
+	<p class="MsoListParagraphCxSpMiddle" align="left" style="text-align: left; text-indent: -18pt; line-height: normal; background: white none repeat scroll 0% 0%;">
+		<b>
+			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
+				<span>8.<span style="font: 7pt &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160; </span>
+				</span>
+			</span>
+		</b>
+		<span lang="EN-US" style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Административное
+право</span>
+		<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">.</span>
+	</p>
+
+	<p class="MsoListParagraphCxSpMiddle" align="left" style="text-align: left; text-indent: -18pt; line-height: normal; background: white none repeat scroll 0% 0%;">
+		<b>
+			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
+				<span>9.<span style="font: 7pt &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160; </span>
+				</span>
+			</span>
+		</b>
+		<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Финансовое
+право.</span>
+		<b>
+			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;"/>
+		</b>
+	</p>
+
+	<p class="MsoListParagraphCxSpMiddle" align="left" style="text-align: left; text-indent: -18pt; line-height: normal; background: white none repeat scroll 0% 0%;">
+		<b>
+			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
+				<span>10.<span style="font: 7pt &quot;times new roman&quot;;">&#160; </span>
+				</span>
+			</span>
+		</b>
+		<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Особенности
+правового регулирования экономической деятельности организации.</span>
+		<b>
+			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;"/>
+		</b>
+	</p>
+
+	<p class="MsoListParagraphCxSpMiddle" align="left" style="text-align: left; text-indent: -18pt; line-height: normal; background: white none repeat scroll 0% 0%;">
+		<b>
+			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
+				<span>11.<span style="font: 7pt &quot;times new roman&quot;;">&#160; </span>
+				</span>
+			</span>
+		</b>
+		<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Предпринимательское<span>&#160; </span>право.</span>
+	</p>
+
+	<p class="MsoListParagraphCxSpMiddle" align="left" style="text-align: left; text-indent: -18pt; line-height: normal; background: white none repeat scroll 0% 0%;">
+		<b>
+			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
+				<span>12.<span style="font: 7pt &quot;times new roman&quot;;">&#160; </span>
+				</span>
+			</span>
+		</b>
+		<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Нотариат. Совершение нотариальных
+действий</span>
+	</p>
+
+	<span style="display: inline-block;"/>
+
+
+
+
+
+	<br/>
+	<h3 class="ms-rteElement-H3B">
+		<a href="/fil/smolensk/dpo/Pages/contacts.aspx" target="_blank">Контакты​</a>
+	</h3>
+</div>
