--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/spec_zakup.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/spec_zakup.html
@@ -1,10 +1,367 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<div style="display: inline;">
+	<div class="ms-rteElement-Callout2">
+		<h3 class="ms-rteElement-H3B">Цель программы</h3>
+		<p>
 
-</body>
-</html>
+
+
+
+
+
+
+
+
+
+
+			<style>
+.ExternalClass p, ,
+{margin-top:0cm;margin-right:0cm;margin-bottom:10.0pt;margin-left:0cm;text-align:center;line-height:115%;font-size:11.0pt;}
+.ExternalClass lt
+{;}
+			</style>
+
+
+
+
+
+
+		</p>
+		<p align="left">
+			<span>Качественное повышение уровня профессиональной
+компетентности<span>&#160; </span>в области контроля и
+управление закупками для эффективного и результативного использования средств,
+выделенных для обеспечения государственных, муниципальных и корпоративных нужд.</span>
+		</p>
+
+
+
+
+
+		<br/>
+		<p>
+			<span>
+				<a href="/fil/smolensk/dpo/retraining/Documents/%D0%9F%D0%A0%D0%9E%D0%A4%D1%81%D1%82%D0%B0%D0%BD%D0%B4%D0%B0%D1%80%D1%82%D1%8B_%D0%A1%D0%BF%D0%B5%D1%86%D0%B8%D0%B0%D0%BB%D0%B8%D1%81%D1%82%20%D0%B2%20%D1%81%D1%84%D0%B5%D1%80%D0%B5%20%D0%B7%D0%B0%D0%BA%D1%83%D0%BF%D0%BE%D0%BA.pdf">
+					<img class="ms-asset-icon ms-rtePosition-4" src="/_layouts/images/icpdf.png" alt=""/>Профессиональные компетенции</a>
+				<a href="/fil/smolensk/dpo/retraining/Documents/finmen.pdf"/>
+				<span style="display: inline-block;"/>
+				<span>
+					<span style="display: inline-block;"/>
+				</span>
+			</span>
+			<br/>
+		</p>
+	</div>
+	<a href="/fil/smolensk/dpo/retraining/Documents/finmen.pdf">
+
+​</a>
+	<h3 class="ms-rteElement-H3B">Краткая информация</h3>
+	<table class="ms-rteTable-1" width="100%" cellspacing="0">
+		<tbody>
+			<tr class="ms-rteTableEvenRow-1">
+				<td colspan="1" rowspan="1" class="ms-rteTableEvenCol-1">
+					<p class="ms-rteElement-P">
+						<strong>Категория слушателей</strong>
+					</p>
+				</td>
+				<td colspan="1" rowspan="1" class="ms-rteTableOddCol-1">
+					<ul>
+						<li>
+							<div class="ms-rteElement-P">
+
+
+
+
+
+
+
+
+
+
+
+								<style>
+								</style>
+								<style>
+								</style>
+
+
+
+
+								<span>Лица, имеющие высшее образование (специалитет,
+бакалавриат, магистратура). </span>
+
+
+
+							</div>
+						</li>
+					</ul>
+				</td>
+			</tr>
+			<tr class="ms-rteTableOddRow-1">
+				<td colspan="1" rowspan="1" class="ms-rteTableEvenCol-1">
+					<p class="ms-rteElement-P">
+						<strong>​Срок обучения</strong>
+					</p>
+				</td>
+				<td class="ms-rteTableOddCol-1">
+					<p class="ms-rteElement-P">​2 - 4 месяцев</p>
+				</td>
+			</tr>
+			<tr class="ms-rteTableEvenRow-1">
+				<td colspan="1" rowspan="1" class="ms-rteTableEvenCol-1">
+					<p class="ms-rteElement-P">
+						<strong>​Форма обучения</strong>
+					</p>
+				</td>
+				<td class="ms-rteTableOddCol-1">
+					<p class="ms-rteElement-P">очная или ​очно-заочная</p>
+				</td>
+			</tr>
+			<tr class="ms-rteTableOddRow-1">
+				<td colspan="1" rowspan="1" class="ms-rteTableEvenCol-1">
+					<p class="ms-rteElement-P">
+						<strong>​Режим занятий</strong>
+					</p>
+				</td>
+				<td class="ms-rteTableOddCol-1">6-8 часов в день<br/>
+				</td>
+			</tr>
+			<tr class="ms-rteTableEvenRow-1">
+				<td colspan="1" rowspan="1" class="ms-rteTableEvenCol-1">
+					<p class="ms-rteElement-P">
+						<strong>​Форма аттестации</strong>
+					</p>
+				</td>
+				<td rowspan="1" class="ms-rteTableOddCol-1">
+					<p class="ms-rteElement-P">экзамен</p>
+				</td>
+			</tr>
+			<tr class="ms-rteTableOddRow-1">
+				<td colspan="1" rowspan="1" class="ms-rteTableEvenCol-1">
+					<p class="ms-rteElement-P">
+						<strong>​Стоимость обучения</strong>
+					</p>
+				</td>
+				<td class="ms-rteTableOddCol-1">
+					<p class="ms-rteElement-P">​25 000 руб.</p>
+				</td>
+			</tr>
+			<tr class="ms-rteTableEvenRow-1">
+				<td colspan="1" rowspan="1" class="ms-rteTableEvenCol-1">
+					<p class="ms-rteElement-P">
+						<strong>Документ&#160;по окончании​ обучения</strong>
+					</p>
+				</td>
+				<td rowspan="1" class="ms-rteTableOddCol-1">
+					<p class="ms-rteElement-P">
+						<a target="_blank" href="/fil/smolensk/dpo/retraining/PublishingImages/diplom.jpg">диплом о профессиональной&#160;переподготовке</a>&#160;установленного образца​</p>
+				</td>
+			</tr>
+		</tbody>
+	</table>
+
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	<div>
+		<div class="ms-rteElement-Callout4">
+			<div>Необходимые&#160;документы для поступления:</div>
+			<ul>
+				<li>
+					<a target="_blank" href="/fil/smolensk/dpo/Documents/anketa.docx">анкета</a>;</li>
+				<li>
+					<font color="#03497e">
+						<a target="_blank" href="/fil/smolensk/dpo/retraining/Documents/zayav-pp.docx">заявление</a>
+					</font>;</li>
+				<li>договоры:</li>
+				<ul>
+					<li>
+					<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Fiz_lico.docx">Физическое лицо</a>
+				</li>
+				<li>
+					<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Ur_lico.docx">Юридическое лицо</a>
+				</li>
+				</ul>
+				<li>другие документы (копия паспорта,&#160;копия документа&#160;об образовании,&#160;фотографии&#160;и&#160;др.)</li>
+			</ul>
+		</div>
+		<h3 class="ms-rteElement-H3B">Перечень модулей</h3>
+		<p class="ms-rteElement-P">
+			<strong/>
+		</p>
+
+		
+		
+		
+		
+
+
+
+
+
+
+
+
+
+
+		<style>
+		</style>
+		<style>
+		</style>
+
+
+
+
+
+
+		<p class="MsoNormal" style="text-align: justify;">
+			<b>
+				<i>
+					<span style="font-size: 12pt; line-height: 115%;">Модуль 1.</span>
+				</i>
+			</b>
+			<b>
+				<span style="font-size: 12pt; line-height: 115%;"> Общие положения контрактной системы</span>
+			</b>
+		</p>
+
+		<p class="MsoNormal" style="margin-left: 63.8pt; text-align: justify; text-indent: -63.8pt;">
+			<b>
+				<i>
+					<span style="font-size: 12pt; line-height: 115%;">Модуль 2.</span>
+				</i>
+			</b>
+			<b>
+				<span style="font-size: 12pt; line-height: 115%;">
+					<span> </span>Законодательство Российской Федерации о
+контрактной системе в сфере закупок</span>
+			</b>
+		</p>
+
+		<p class="MsoNormal" style="text-align: justify;">
+			<b>
+				<i>
+					<span style="font-size: 12pt; line-height: 115%;">Модуль 3.</span>
+				</i>
+			</b>
+			<b>
+				<span style="font-size: 12pt; line-height: 115%;">
+					<span> </span>Планирование и обоснование закупок</span>
+			</b>
+		</p>
+
+		<p class="MsoNormal" style="text-align: justify;">
+			<b>
+				<i>
+					<span style="font-size: 12pt; line-height: 115%;">Модуль 4.</span>
+				</i>
+			</b>
+			<b>
+				<span style="font-size: 12pt; line-height: 115%;">
+					<span> </span>Осуществление закупок</span>
+			</b>
+		</p>
+
+		<p class="MsoNormal" style="text-align: justify;">
+			<b>
+				<i>
+					<span style="font-size: 12pt; line-height: 115%;">Модуль 5</span>
+				</i>
+			</b>
+			<b>
+				<span style="font-size: 12pt; line-height: 115%;">.<span> </span>Контракты</span>
+			</b>
+		</p>
+
+		<p class="MsoNormal" style="margin-left: 63.8pt; text-align: justify; text-indent: -63.8pt;">
+			<b>
+				<i>
+					<span style="font-size: 12pt; line-height: 115%;">Модуль&#160;6.<span> </span>
+					</span>
+				</i>
+			</b>
+			<b>
+				<span style="font-size: 12pt; line-height: 115%;">Мониторинг, контроль, аудит и защита
+прав и интересов участников закупок</span>
+			</b>
+		</p>
+
+		<p class="MsoNormal" style="text-align: justify;">
+			<b>
+				<i>
+					<span style="font-size: 12pt; line-height: 115%;">Модуль 7.</span>
+				</i>
+			</b>
+			<b>
+				<span style="font-size: 12pt; line-height: 115%;"> Вариативная часть</span>
+			</b>
+			<b>
+				<span style="font-size: 14pt; line-height: 115%;"/>
+			</b>
+		</p>
+
+		<p class="MsoNormal" style="text-align: justify;">
+			<b>
+				<span style="font-size: 14pt; line-height: 115%;">&#160;</span>
+			</b>
+		</p>
+
+
+
+
+
+		<h3 class="ms-rteElement-H3B">Материалы для слушателей</h3>
+		<a href="/fil/smolensk/dpo/retraining/Documents/%D0%9F%D1%80%D0%B8%D0%BC%D0%B5%D1%80%D0%BD%D1%8B%D0%B5%20%D0%B2%D0%BE%D0%BF%D1%80%D0%BE%D1%81%D1%8B_%D0%A1%D0%BF%D0%B5%D1%86%D0%B8%D0%B0%D0%BB%D0%B8%D1%81%D1%82%20%D0%B2%20%D1%81%D1%84%D0%B5%D1%80%D0%B5%20%D0%B7%D0%B0%D0%BA%D1%83%D0%BF%D0%BE%D0%BA_2018.pdf">Примерные вопросы к итоговой аттестации</a>
+		<br/>
+
+
+
+
+
+
+
+
+
+
+
+
+		<style>
+.ExternalClass p.MsoNormal, .ExternalClass li.MsoNormal, .ExternalClass div.MsoNormal
+{margin:0cm;margin-bottom:.0001pt;font-size:12.0pt;font-family:"Times New Roman",serif;}
+.ExternalClass .MsoChpDefault
+{font-size:10.0pt;}
+@page WordSection1
+{size:612.0pt 792.0pt;margin:2.0cm 42.5pt 2.0cm 3.0cm;}
+.ExternalClass div.WordSection1
+{page:WordSection1;}
+.ExternalClass ol
+{margin-bottom:0cm;}
+.ExternalClass ul
+{margin-bottom:0cm;}
+		</style>
+		<span>
+			<a href="/fil/smolensk/dpo/retraining/Documents/%D0%9F%D1%80%D0%B8%D0%BC%D0%B5%D1%80%D0%BD%D1%8B%D0%B5%20%D0%B7%D0%B0%D0%B4%D0%B0%D1%87%D0%B8_%D0%A1%D0%BF%D0%B5%D1%86%D0%B8%D0%B0%D0%BB%D0%B8%D1%81%D1%82%20%D0%B2%20%D1%81%D1%84%D0%B5%D1%80%D0%B5%20%D0%B7%D0%B0%D0%BA%D1%83%D0%BF%D0%BE%D0%BA_2018.pdf">Примерные
+     практико-ориентированные задания к итоговой аттестации<span style="display: inline-block;"/>
+			</a>
+		</span>
+		<style>
+		</style>
+
+
+
+
+
+		<br/>
+		<br/>
+		<a target="_blank" href="/fil/smolensk/dpo/Pages/contacts.aspx">Контакты​</a>
+	</div>
+	<div>
+		<br/>
+	</div>
+</div>
+<br/>
