--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/default.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/default.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<style>
+#myblank
+{font-size:14pt;font-family:Times;text-align:justify;line-height:115%;}
+.link
+{font-size:12pt;}
+</style>
+
+
 
 <div><p class="ms-rteElement-P"><span><strong><img src="/fil/smolensk/dpo/PublishingImages/3.jpg" class="ms-rtePosition-1" alt="" style="margin: 5px; width: 250px; height: 167px;"/><br/><br/><span style="color: rgb(37, 101, 105);">Программы профессиональной переподготовки направлены на получение компетенции, необходимой для выполнения нового вида профессиональной деятельности.</span></strong></span></p></div>
 <h3 class="ms-rteElement-H3B" style="text-align: center;"><br/></h3>
@@ -13,8 +14,8 @@
 <span class="ms-rteThemeForeColor-1-0">
 </span>
 <a href="/fil/smolensk/dpo/retraining/Pages/gos_mu_upr.aspx"></a><table class="ms-rteTable-6" width="100%" cellspacing="0"><tbody><tr class="ms-rteTableEvenRow-6"><td colspan="1" rowspan="1" class="ms-rteTableEvenCol-6"><strong>Название программы​</strong></td>
-    <td colspan="1" rowspan="1" class="ms-rteTableOddCol-6">​<strong>Период обучения</strong></td>
-    <td colspan="1" rowspan="1" class="ms-rteTableEvenCol-6">​<strong>Стоимость</strong></td></tr>
+<td colspan="1" rowspan="1" class="ms-rteTableOddCol-6">​<strong>Период обучения</strong></td>
+<td colspan="1" rowspan="1" class="ms-rteTableEvenCol-6">​<strong>Стоимость</strong></td></tr>
 <tr class="ms-rteTableOddRow-6"><td colspan="1" rowspan="1">​
 
 
@@ -28,7 +29,7 @@
 
 
 
-    <style>
+<style>
 p.MsoNormal, li.MsoNormal, div.MsoNormal
 {margin:0cm;margin-bottom:.0001pt;font-size:12.0pt;font-family:"Times New Roman","serif";}
 .MsoChpDefault
@@ -42,7 +43,7 @@ div.WordSection1
 
 
 </td>
-    <td colspan="1" rowspan="1">​
+<td colspan="1" rowspan="1">​
 
 
 
@@ -55,7 +56,7 @@ div.WordSection1
 
 
 
-        <style>
+<style>
 p.MsoNormal, li.MsoNormal, div.MsoNormal
 {margin:0cm;margin-bottom:.0001pt;font-size:12.0pt;font-family:"Times New Roman","serif";}
 .MsoChpDefault
@@ -69,12 +70,12 @@ div.WordSection1
 
 
 
-        <span>3</span><span>-4&#160;&#160;месяца</span>
+<span>3</span><span>-4&#160;&#160;месяца</span>
 
 
 
-    </td>
-    <td colspan="1" rowspan="1" class="ms-rteTableEvenCol-6">​<span>30 000 руб.<span style="display: inline-block;"></span></span></td></tr>
+</td>
+<td colspan="1" rowspan="1" class="ms-rteTableEvenCol-6">​<span>30 000 руб.<span style="display: inline-block;"></span></span></td></tr>
 <tr class="ms-rteTableEvenRow-6"><td colspan="1" rowspan="1" class="ms-rteTableEvenCol-6"><a href="/fil/smolensk/dpo/retraining/Pages/prav_reg.aspx">​
 
 
@@ -88,7 +89,7 @@ div.WordSection1
 
 
 
-    <style>
+<style>
 .ExternalClass p.MsoNormal, .ExternalClass li.MsoNormal, .ExternalClass div.MsoNormal
 {margin:0cm;margin-bottom:.0001pt;font-size:12.0pt;font-family:"Times New Roman","serif";}
 .ExternalClass .MsoChpDefault
@@ -101,37 +102,61 @@ div.WordSection1
 
 
 
-    <span style="display: inline-block;"></span></a></td>
-    <td colspan="1" rowspan="1" class="ms-rteTableOddCol-6">​7-8 месяцев</td>
-    <td rowspan="1" class="ms-rteTableEvenCol-6">​35 000 руб.</td></tr>
+<span style="display: inline-block;"></span></a></td>
+<td colspan="1" rowspan="1" class="ms-rteTableOddCol-6">​7-8 месяцев</td>
+<td rowspan="1" class="ms-rteTableEvenCol-6">​35 000 руб.</td></tr>
 <tr class="ms-rteTableOddRow-6"><td colspan="1" rowspan="1" class="ms-rteTableEvenCol-6">​<a href="/fil/smolensk/dpo/retraining/Pages/per_vsfer_prof.aspx">Переводчик в сфере профессиональной коммуникации<b><span style="font-size: 14pt; font-family: &quot;times new roman&quot;, serif; color: black;"></span></b>​</a></td>
-    <td colspan="1" rowspan="1" class="ms-rteTableOddCol-6">​2 года</td>
-    <td rowspan="1" class="ms-rteTableEvenCol-6">​38 000 руб.</td></tr>
+<td colspan="1" rowspan="1" class="ms-rteTableOddCol-6">​2 года</td>
+<td rowspan="1" class="ms-rteTableEvenCol-6">​38 000 руб.</td></tr>
 <tr class="ms-rteTableEvenRow-6"><td colspan="1" rowspan="1" class="ms-rteTableEvenCol-6">​<a href="/fil/smolensk/dpo/retraining/Pages/fin_cred.aspx">Финансы и кредит​</a></td>
-    <td colspan="1" rowspan="1" class="ms-rteTableOddCol-6">​4-6 месяца</td>
-    <td rowspan="1" class="ms-rteTableEvenCol-6">​27 300 руб.</td></tr>
+<td colspan="1" rowspan="1" class="ms-rteTableOddCol-6">​4-6 месяца</td>
+<td rowspan="1" class="ms-rteTableEvenCol-6">​27 300 руб.</td></tr>
 <tr class="ms-rteTableOddRow-6"><td colspan="1" rowspan="1" class="ms-rteTableEvenCol-6">​Эксперт в сфере закупок<br/></td>
-    <td colspan="1" rowspan="1" class="ms-rteTableOddCol-6">​2-4 месяца</td>
-    <td rowspan="1" class="ms-rteTableEvenCol-6">​</td></tr>
+<td colspan="1" rowspan="1" class="ms-rteTableOddCol-6">​2-4 месяца</td>
+<td rowspan="1" class="ms-rteTableEvenCol-6">​</td></tr>
 <tr class="ms-rteTableEvenRow-6"><td colspan="1" rowspan="1" class="ms-rteTableEvenCol-6"><a href="/fil/smolensk/dpo/retraining/Pages/spec_zakup.aspx">​Специалист в сфере закупок</a></td>
 
-    <td colspan="1" rowspan="1" class="ms-rteTableOddCol-6">​2-4 месяца</td>
-    <td rowspan="1" class="ms-rteTableEvenCol-6">​25 000 руб.</td></tr>
+<td colspan="1" rowspan="1" class="ms-rteTableOddCol-6">​2-4 месяца</td>
+<td rowspan="1" class="ms-rteTableEvenCol-6">​25 000 руб.</td></tr>
 <tr class="ms-rteTableOddRow-6"><td colspan="1" rowspan="1" class="ms-rteTableEvenCol-6"><a href="/fil/smolensk/dpo/retraining/Pages/fin-men.aspx">Финансовый менеджмент</a></td>
-    <td colspan="1" rowspan="4" class="ms-rteTableOddCol-6">6-8 месяцев​</td>
-    <td rowspan="4" class="ms-rteTableEvenCol-6">​30 000 руб. </td></tr>
+<td colspan="1" rowspan="4" class="ms-rteTableOddCol-6">6-8 месяцев​</td>
+<td rowspan="4" class="ms-rteTableEvenCol-6">​30 000 руб. </td></tr>
 <tr class="ms-rteTableEvenRow-6"><td colspan="1" rowspan="1" class="ms-rteTableEvenCol-6"><a target="_blank" href="/fil/smolensk/dpo/retraining/Pages/buh.aspx">Бухгалтерский учет, анализ и аудит</a></td></tr>
 
 
 
 
 <tr class="ms-rteTableOddRow-6"><td colspan="1" rowspan="1" class="ms-rteTableEvenCol-6"><a href="/fil/smolensk/dpo/retraining/Pages/ekupr.aspx">​Экономика труда и управление персоналом</a></td></tr>
-<tr class="ms-rteTableEvenRow-6"><td colspan="1" rowspan="1" class="ms-rteTableEvenCol-6"><span><a href="/fil/smolensk/dpo/retraining/Pages/gos_mu_upr.aspx">​<span>Государственное
-и муниципальное управление</span></a><a href="/fil/smolensk/dpo/retraining/Pages/gos_mu_upr.aspx"><span style="display: inline-block;"></span></a></span></td>
+<tr class="ms-rteTableEvenRow-6"><td colspan="1" rowspan="1" class="ms-rteTableEvenCol-6"><span><a href="/fil/smolensk/dpo/retraining/Pages/gos_mu_upr.aspx">​
+<span>Государственное
+и муниципальное управление</span></a>
+
+
+<a href="/fil/smolensk/dpo/retraining/Pages/gos_mu_upr.aspx"><span style="display: inline-block;"></span></a>
+</span></td>
 </tr></tbody></table>
+
+
+
+
+
+
+<div id="myblank" style="text-align: center;">
+	<br/>
+	Предоставляются скидки в размере до 30% от стоимости обучения
+
+	<br/><br/>
+	<p style="text-align: justify;">
+	<a class="link" href="/fil/smolensk/dpo/qualification/Pages/fil/smolensk/dpo/retraining/Documents/%D0%9F%D1%80%D0%B8%D0%BA%D0%B0%D0%B7%201728%D0%BE%20%D0%BE%D1%82%2006.10.2017%20%D0%B3.pdf">​Приказ №1728/о от 06.10.2017 &quot;Об утверждении Положения о предоставлении скидок по оплате обучения слушателям, обучающимся по договорам об оказании платных образовательных услуг, заключаемым при приеме на обучение по дополнительным образовательным программам&quot; 
+	</a>
+	</p>
+	<br/>
+</div>
+
+
+
+
+
+
 <div class="ms-rteElement-Callout4"><p style="text-align: center;">По окончании обучения слушателю выдается </p>
-    <p style="text-align: center;"><a target="_blank" href="/fil/smolensk/dpo/retraining/PublishingImages/diplom.jpg">Диплом о профессиональной переподготовке с приложением</a></p></div>
-
-
-</body>
-</html>
+<p style="text-align: center;"><a target="_blank" href="/fil/smolensk/dpo/retraining/PublishingImages/diplom.jpg">Диплом о профессиональной переподготовке с приложением</a></p></div>
